Update translation - 102884377 (#3348) 590e5be00f052ea2b931133874d9fe994ce56a0e

--- a/ar/holidays/index.html
+++ b/ar/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الإجازات وكوفيد-19</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;4:47 م الساعة 9 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;2:55 م الساعة 17 فبراير 2021</p>
           
         </div>
       </div>
@@ -165,27 +165,7 @@
 
 
 
-<ul><li><strong><a href="#lunarnewyear">السنة القمرية الجديدة</a></strong></li><li><strong><a href="#the-covid-chat">إجراء "دردشة كوفيد"</a></strong></li><li><strong><a href="#restrictions">تحقق من القيود في منطقتك</a></strong></li><li><strong><a href="#travel-advisory">إرشادات السفر</a></strong></li><li><strong><a href="#holiday-tips">نصائح لقضاء الإجازات بصحة أفضل</a></strong></li></ul>
-
-
-
-<h2 id="lunarnewyear">السنة القمرية الجديدة</h2>
-
-
-
-<div class="text-center"> <img loading="lazy" src="https://files.covid19.ca.gov/img/LunarNewYearOx.png" alt="رسم توضيحي لثور راقص مع نص مكتوب &quot;احمِ عائلتك&quot; - احتفل برأس السنة القمرية الجديدة بأمان هذا العام" width="350" height="350"> </div><p></p>
-
-
-
-<p>ونحن نحتفل بعام الثور، فمن المهم حماية أحبائنا من كوفيد-19. إحدى الطرق للقيام بذلك هي تجنب التجمعات الشخصية في هذه السنة القمرية الجديدة.</p>
-
-
-
-<p>يُرجى مواصلة ممارسة تقاليدك العائلية والثقافية، ولكن: </p>
-
-
-
-<ul><li>اقصر الاحتفالات على أولئك الموجودين داخل منزلك وتواصل مع غيرهم افتراضيًا</li><li>ارتدِ قناعًا وابق على بُعد 6 أقدام من الآخرين</li></ul>
+<ul><li><strong><a href="#the-covid-chat">إجراء "دردشة كوفيد"</a></strong></li><li><strong><a href="#restrictions">تحقق من القيود في منطقتك</a></strong></li><li><strong><a href="#travel-advisory">إرشادات السفر</a></strong></li><li><strong><a href="#holiday-tips">نصائح لقضاء الإجازات بصحة أفضل</a></strong></li></ul>
 
 
 
