--- a/vi/holidays/index.html
+++ b/vi/holidays/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Ngày lễ và COVID-19</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;9 tháng 2, 2021 lúc 16:47</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;17 tháng 2, 2021 lúc 14:55</p>
           
         </div>
       </div>
@@ -167,31 +167,11 @@
 
 
 
-<ul><li><strong><a href="#lunarnewyear">Tết Nguyên Đán</a></strong></li><li><strong><a href="#the-covid-chat">Tổ chức “Trò chuyện thời COVID”</a></strong></li><li><strong><a href="#restrictions">Kiểm tra các hạn chế trong khu vực của quý vị</a></strong></li><li><strong><a href="#travel-advisory">Tư vấn đi lại</a></strong></li><li><strong><a href="#holiday-tips">Gợi ý cho các dịp lễ khỏe mạnh hơn</a></strong></li></ul>
+<ul><li><strong><a href="#the-covid-chat">Tổ chức chương trình “Trò chuyện thời COVID”</a></strong></li><li><strong><a href="#restrictions">Kiểm tra các hạn chế trong khu vực của quý vị</a></strong></li><li><strong><a href="#travel-advisory">Tư vấn đi lại</a></strong></li><li><strong><a href="#holiday-tips">Gợi ý cho các dịp lễ khỏe mạnh hơn</a></strong></li></ul>
 
 
 
-<h2 id="lunarnewyear">Tết Nguyên Đán</h2>
-
-
-
-<div class="text-center"> <img loading="lazy" src="https://files.covid19.ca.gov/img/LunarNewYearOx.png" alt="Hình ảnh chú trâu nhảy múa với dòng chữ Hãy bảo vệ gia đình bạn - Đón Tết Nguyên Đán năm nay thật an toàn" width="350" height="350"> </div><p></p>
-
-
-
-<p>Khi chúng ta ăn mừng Năm Tân Sửu, điều quan trọng là phải bảo vệ những người thân yêu tránh bệnh COVID-19. Một cách để thực hiện điều đó là tránh tụ tập trực tiếp trong dịp Tết Nguyên Đán này.</p>
-
-
-
-<p>Quý vị có thể duy trì các truyền thống gia đình và văn hóa của mình nhưng vui lòng: </p>
-
-
-
-<ul><li>Giới hạn hoạt động kỷ niệm trong phạm vi hộ gia đình và kết nối với những người khác qua mạng</li><li>Đeo khẩu trang và giữ khoảng cách 6 foot</li></ul>
-
-
-
-<h2 id="the-covid-chat">Tổ chức “Trò chuyện thời COVID”</h2>
+<h2 id="the-covid-chat">Tổ chức chương trình “Trò chuyện thời COVID”</h2>
 
 
 
