--- a/zh-hans/holidays/index.html
+++ b/zh-hans/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>节日与COVID-19</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月9日, 下午4:47</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月17日, 下午2:55</p>
           
         </div>
       </div>
@@ -165,27 +165,7 @@
 
 
 
-<ul><li><strong><a href="#lunarnewyear">农历新年</a></strong></li><li><strong><a href="#the-covid-chat">进行“与COVID相关的交谈”</a></strong></li><li><strong><a href="#restrictions">查看当地限制</a></strong></li><li><strong><a href="#travel-advisory">出行建议</a></strong></li><li><strong><a href="#holiday-tips">有关度过更健康的节日的建议</a></strong></li></ul>
-
-
-
-<h2 id="lunarnewyear">农历新年</h2>
-
-
-
-<div class="text-center"> <img loading="lazy" src="https://files.covid19.ca.gov/img/LunarNewYearOx.png" alt="带有保护您的家人 - 安全庆祝农历新年字样的舞牛插图" width="350" height="350"> </div><p></p>
-
-
-
-<p>庆祝牛年之时，保护我们的亲友免于感染COVID-19至关重要。 对此，其中一种方法是避免在农历新年参与现场聚集活动。</p>
-
-
-
-<p>请继续延续您的家庭和文化传统，但请： </p>
-
-
-
-<ul><li>仅和同住人士举行线下庆祝活动，和他人则举行线上庆祝活动</li><li>佩戴面罩并保持6英尺距离</li></ul>
+<ul><li><strong><a href="#the-covid-chat">进行“与COVID相关的交谈”</a></strong></li><li><strong><a href="#restrictions">查看当地限制</a></strong></li><li><strong><a href="#travel-advisory">出行建议</a></strong></li><li><strong><a href="#holiday-tips">有关度过更健康的节日的建议</a></strong></li></ul>
 
 
 
