--- a/zh-hant/holidays/index.html
+++ b/zh-hant/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>節日與COVID-19</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月9日, 下午4:47</p>
+            <p class="small-text">最近更新&nbsp;2021年2月17日, 下午2:55</p>
           
         </div>
       </div>
@@ -165,27 +165,7 @@
 
 
 
-<ul><li><strong><a href="#lunarnewyear">農曆新年</a></strong></li><li><strong><a href="#the-covid-chat">進行「有關COVID的對話」</a></strong></li><li><strong><a href="#restrictions">查看當地限制</a></strong></li><li><strong><a href="#travel-advisory">出行建議</a></strong></li><li><strong><a href="#holiday-tips">有關度過更健康的節日的建議</a></strong></li></ul>
-
-
-
-<h2 id="lunarnewyear">農曆新年</h2>
-
-
-
-<div class="text-center"> <img loading="lazy" src="https://files.covid19.ca.gov/img/LunarNewYearOx.png" alt="帶有保護您的家人 - 安全慶祝農曆新年字樣的舞牛插圖" width="350" height="350"> </div><p></p>
-
-
-
-<p>慶祝牛年之時，防止我們的親友感染COVID-19至關重要。 對此，其中一種方法是避免在農曆新年參加現場聚集活動。</p>
-
-
-
-<p>請繼續延續您的家庭和文化傳統，但請： </p>
-
-
-
-<ul><li>僅和同住人士舉行線下慶祝活動，和他人則舉行線上慶祝活動</li><li>佩戴面罩並保持6英尺距離</li></ul>
+<ul><li><strong><a href="#the-covid-chat">進行「有關COVID的對話」</a></strong></li><li><strong><a href="#restrictions">查看當地限制</a></strong></li><li><strong><a href="#travel-advisory">出行建議</a></strong></li><li><strong><a href="#holiday-tips">有關度過更健康的節日的建議</a></strong></li></ul>
 
 
 
