--- a/es/holidays/index.html
+++ b/es/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Las vacaciones y la COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;9 de febrero de 2021 a las 4:47 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;17 de febrero de 2021 a las 2:55 p. m.</p>
           
         </div>
       </div>
@@ -165,27 +165,7 @@
 
 
 
-<ul><li><strong><a href="#lunarnewyear">Año Nuevo Lunar.</a></strong></li><li><strong><a href="#the-covid-chat">Tener “la charla de la COVID”.</a></strong></li><li><strong><a href="#restrictions">Consulte las restricciones de su área.</a></strong></li><li><strong><a href="#travel-advisory">Consejos de viaje.</a></strong></li><li><strong><a href="#holiday-tips">Consejos para festividades más saludables.</a></strong></li></ul>
-
-
-
-<h2 id="lunarnewyear">Año Nuevo Lunar</h2>
-
-
-
-<div class="text-center"> <img loading="lazy" src="https://files.covid19.ca.gov/img/LunarNewYearOx.png" alt="Ilustración de un buey bailando con el texto &quot;Proteja a su familia. Celebre el Año Nuevo Lunar de forma segura este año&quot;." width="350" height="350"> </div><p></p>
-
-
-
-<p>Al celebrar el Año del Buey, es importante proteger a nuestros seres queridos de la COVID-19. Una forma de hacerlo es evitar las reuniones en persona este Año Nuevo Lunar.</p>
-
-
-
-<p>Continúe con sus tradiciones familiares y culturales, pero: </p>
-
-
-
-<ul><li>Limite las celebraciones a las personas de su hogar y conéctese con otros virtualmente.</li><li>Use mascarilla y manténgase a seis pies de distancia.</li></ul>
+<ul><li><strong><a href="#the-covid-chat">Tener “la charla de la COVID”.</a></strong></li><li><strong><a href="#restrictions">Consulte las restricciones de su área.</a></strong></li><li><strong><a href="#travel-advisory">Consejos de viaje.</a></strong></li><li><strong><a href="#holiday-tips">Consejos para festividades más saludables.</a></strong></li></ul>
 
 
 
