--- a/ko/holidays/index.html
+++ b/ko/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>휴일과 COVID-19</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 9일 오후 4:47</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 17일 오후 2:55</p>
           
         </div>
       </div>
@@ -165,31 +165,11 @@
 
 
 
-<ul><li><strong><a href="#lunarnewyear">구정</a></strong></li><li><strong><a href="#the-covid-chat">"COVID 대화" 나누기</a></strong></li><li><strong><a href="#restrictions">해당 지역 내 제한 조치 확인</a></strong></li><li><strong><a href="#travel-advisory">여행 주의보</a></strong></li><li><strong><a href="#holiday-tips">더 건강한 휴일을 지내기 위한 요령</a></strong></li></ul>
+<ul><li><strong><a href="#the-covid-chat">"COVID 대화" 갖기</a></strong></li><li><strong><a href="#restrictions">해당 지역 내 제한 조치 확인</a></strong></li><li><strong><a href="#travel-advisory">여행 주의보</a></strong></li><li><strong><a href="#holiday-tips">더 건강하게 휴일을 지내기 위한 요령</a></strong></li></ul>
 
 
 
-<h2 id="lunarnewyear">구정</h2>
-
-
-
-<div class="text-center"> <img loading="lazy" src="https://files.covid19.ca.gov/img/LunarNewYearOx.png" alt="춤 추는 소의 그림과 가족을 보호하세요 - 올해 구정은  안전하게 맞이하세요라는 내용의 문구" width="350" height="350"> </div><p></p>
-
-
-
-<p>소의 해를 맞이하면서 COVID-19로부터 가족을 보호하는 것이 중요합니다. 이를 위한 한가지 방법은 이번 구정에 대면 모임을 삼가하는 것입니다.</p>
-
-
-
-<p>집안 전통과 문화 전통을 이어가면서도 다음을 준수하십시오: </p>
-
-
-
-<ul><li>축하는 본인의 세대원으로 제한하며 다른 가족과는 화상으로 연락</li><li>마스크 착용 및 6 피트 거리 유지</li></ul>
-
-
-
-<h2 id="the-covid-chat">"COVID 대화" 나누기</h2>
+<h2 id="the-covid-chat">"COVID 대화" 갖기</h2>
 
 
 
