--- a/tl/holidays/index.html
+++ b/tl/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga Holiday at ang COVID-19</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 9, 2021 sa 4:47 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 17, 2021 sa 2:55 PM</p>
           
         </div>
       </div>
@@ -165,27 +165,7 @@
 
 
 
-<ul><li><strong><a href="#lunarnewyear">Lunar New Year</a></strong></li><li><strong><a href="#the-covid-chat">Pagkakaroon ng "Pag-uusap tungkol sa COVID"</a></strong></li><li><strong><a href="#restrictions">Alamin ang mga paghihigpit sa iyong lugar</a></strong></li><li><strong><a href="#travel-advisory">Abiso sa paglalakbay</a></strong></li><li><strong><a href="#holiday-tips">Mga tip para sa mas malusog na holiday</a></strong></li></ul>
-
-
-
-<h2 id="lunarnewyear">Lunar New Year</h2>
-
-
-
-<div class="text-center"> <img loading="lazy" src="https://files.covid19.ca.gov/img/LunarNewYearOx.png" alt="Larawan ng isang sumasayaw na ox na may text na Protektahan ang iyong pamilya - Ipagdiwang nang ligtas ang Lunar New Year ngayong taon" width="350" height="350"> </div><p></p>
-
-
-
-<p>Sa ating pagdiriwang ng Year of the Ox, mahalagang protektahan ang ating mga mahal sa buhay mula sa COVID-19. Isang paraan para gawin ito ay ang pag-iwas sa mga in-person na pagtitipon ngayong Lunar New Year.</p>
-
-
-
-<p>Ipagpatuloy ang iyong mga pampamilya at kultural na tradisyon, pero: </p>
-
-
-
-<ul><li>Limitahan ang iyong mga pagdiriwang kasama ang iyong mga kasama sa bahay at makipag-ugnayan sa iba sa virtual na paraan</li><li>Magsuot ng mask at magpanatili ng 6 na talampakang layo</li></ul>
+<ul><li><strong><a href="#the-covid-chat">Pagkakaroon ng "Pag-uusap tungkol sa COVID"</a></strong></li><li><strong><a href="#restrictions">Alamin ang mga paghihigpit sa iyong lugar</a></strong></li><li><strong><a href="#travel-advisory">Abiso sa paglalakbay</a></strong></li><li><strong><a href="#holiday-tips">Mga tip para sa mas malusog na holiday</a></strong></li></ul>
 
 
 
