Update translation - 102883443 (#3347) 8c9f9a6ff60a48d610a6e9bca27d0411b5b435d4

--- a/es/v2-state-dashboard/index.html
+++ b/es/v2-state-dashboard/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Los datos más recientes sobre casos, muertes, pruebas y niveles de los condados.">
+    <meta name="description" content="Consulte los datos más recientes sobre casos, muertes, pruebas y niveles de los condados.">
     <meta name="author" content="State of California">
      
   <title>Rastreo de la COVID-19 en California - Coronavirus COVID-19 Response</title>
@@ -13,7 +13,7 @@
     <script>addEventListener('error', window.__e=function f(e){f.q=f.q||[];f.q.push(e)});</script>
 
     <meta content="Rastreo de la COVID-19 en California" property="og:title">
-    <meta content="Los datos más recientes sobre casos, muertes, pruebas y niveles de los condados." property="og:description">
+    <meta content="Consulte los datos más recientes sobre casos, muertes, pruebas y niveles de los condados." property="og:description">
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="preconnect" href="https://www.google-analytics.com/">
@@ -231,11 +231,28 @@
       <div class="col-lg-10 mx-auto">
         <p class="small-text">Actualizado el 17 de febrero de 2021, con datos del 16 de febrero de 2021.</p>
 
-        <p class="small-text">Nota: La tasa de casos y la positividad de las pruebas se basan en un promedio de 7 días con un retraso de 7 días. Las tasas de muertes se basan en un promedio de 7 días con un retraso de 21 días debido a demoras en el reporte. El cambio direccional se compara con el periodo anterior de 7 días. Datos proporcionados por el Departamento de Salud Pública de California.</p>
+        <p class="small-text">Nota: La tasa de casos se basa en un promedio de 7 días con un retraso de 7 días. Las tasas de muertes se basan en un promedio de 7 días con un retraso de 21 días debido a demoras en el reporte. La positividad de las pruebas se basa en un promedio de 7 días sin retraso. El cambio direccional se compara con el periodo anterior de 7 días. Datos proporcionados por el Departamento de Salud Pública de California.</p>
       </div>
     </div>
 
-  </div>   <!--END container--> </div> <!--END LIGHT BLUE BG-->    <h2 class="text-center color-purple">Vea los datos de todo el estado y de cada condado</h2>
+  </div>   <!--END container--> </div> <!--END LIGHT BLUE BG-->    <div class="bg-darkblue py-5 full-bleed mb-5">
+            <div class="container py-2">
+                <div class="row pb-4">
+                    <div class="col-lg-10 mx-auto color-white">
+                        <h2 class="text-center color-orange" id="vaccination">Fecha de vacunación</h2>
+                        <p>La vacunación contra la COVID-19 es una de las herramientas más importantes para poner fin a la pandemia. Estamos siguiendo el progreso de la vacunación de los californianos en todo el estado.</p>
+
+                        <div class="mt-3 text-center">                             <a href="/vaccines/#California-vaccines-dashboard" class="link-arrow-white">                                 <div class="link-arrow-label">Consulte los datos de la vacunación</div><cagov-arrow></cagov-arrow> </a>                         </div>
+
+
+                    </div>
+                </div>
+
+            </div><!--END container-->         </div>
+
+
+
+<h2 class="text-center color-purple">Vea los datos de todo el estado y de cada condado.</h2>
 
 
 
