--- a/tl/v2-state-dashboard/index.html
+++ b/tl/v2-state-dashboard/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Ang pinakabagong data sa mga kaso, pagkamatay, pagsusuri at mga tier ng county.">
+    <meta name="description" content="Tingnan ang pinakabagong data sa mga kaso, pagkamatay, pagsusuri at mga tier ng county.">
     <meta name="author" content="State of California">
      
   <title>Pagsubaybay sa COVID-19 sa California - Coronavirus COVID-19 Response</title>
@@ -13,7 +13,7 @@
     <script>addEventListener('error', window.__e=function f(e){f.q=f.q||[];f.q.push(e)});</script>
 
     <meta content="Pagsubaybay sa COVID-19 sa California" property="og:title">
-    <meta content="Ang pinakabagong data sa mga kaso, pagkamatay, pagsusuri at mga tier ng county." property="og:description">
+    <meta content="Tingnan ang pinakabagong data sa mga kaso, pagkamatay, pagsusuri at mga tier ng county." property="og:description">
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="preconnect" href="https://www.google-analytics.com/">
@@ -231,11 +231,28 @@
       <div class="col-lg-10 mx-auto">
         <p class="small-text">Na-update noong Pebrero 17, 2021, na may datos mula sa Pebrero 16, 2021.</p>
 
-        <p class="small-text">Tala: Ang rate ng kaso at pagpopositibo sa pagsusuri ay batay sa 7 araw na average na may 7 araw na lag. Ang mga rate ng pagkamatay ay batay sa 7 araw na average na may 21 araw na lag dahil sa mga pagkakaantala sa pag-uulat. Ang pagbabago sa direksyon ay inihahambing sa naunang 7 araw na panahon. Ang datos ay ibinibigay ng California Department of Public Health.</p>
+        <p class="small-text">Tala: Ang rate ng kaso ay batay sa 7 araw na average na may 7 araw na lag. Ang mga rate ng pagkamatay ay batay sa 7 araw na average na may 21 araw na lag dahil sa mga pagkakaantala sa pag-uulat. Nakabatay ang pagpopositibo ng pagsusuri sa isang 7 araw na araw nang walang lag. Ang pagbabago sa direksyon ay inihahambing sa naunang 7 araw na panahon. Ang datos ay ibinibigay ng California Department of Public Health.</p>
       </div>
     </div>
 
-  </div>   <!--END container--> </div> <!--END LIGHT BLUE BG-->    <h2 class="text-center color-purple">Tingnan ang pambuong estadong datos at sa bawat county</h2>
+  </div>   <!--END container--> </div> <!--END LIGHT BLUE BG-->    <div class="bg-darkblue py-5 full-bleed mb-5">
+            <div class="container py-2">
+                <div class="row pb-4">
+                    <div class="col-lg-10 mx-auto color-white">
+                        <h2 class="text-center color-orange" id="vaccination">Datos sa pagbabakuna</h2>
+                        <p>Ang pagpapabakuna laban sa COVID-19 ay isa sa pinakamahahalagang instrumento para mawakasan ang pandemya. Sinusubaybayan namin ang progreso ng pagbabakuna ng mga Californian sa buong estado.</p>
+
+                        <div class="mt-3 text-center">                             <a href="/vaccines/#California-vaccines-dashboard" class="link-arrow-white">                                 <div class="link-arrow-label">Tingnan ang datos sa pagbabakuna</div><cagov-arrow></cagov-arrow> </a>                         </div>
+
+
+                    </div>
+                </div>
+
+            </div><!--END container-->         </div>
+
+
+
+<h2 class="text-center color-purple">Tingnan ang pambuong estadong datos at sa bawat county</h2>
 
 
 
