--- a/vi/v2-state-dashboard/index.html
+++ b/vi/v2-state-dashboard/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Dữ liệu mới nhất về các ca bệnh, ca tử vong, xét nghiệm và cấp quận.">
+    <meta name="description" content="Xem dữ liệu mới nhất về các ca bệnh, ca tử vong, kết quả xét nghiệm và cấp quận.">
     <meta name="author" content="State of California">
      
-  <title>Theo dõi COVID-19 tại California - Coronavirus COVID-19 Response</title>
+  <title>Theo dõi tình hình COVID-19 tại California - Coronavirus COVID-19 Response</title>
 
 
     <!-- Collect errors -->
     <script>addEventListener('error', window.__e=function f(e){f.q=f.q||[];f.q.push(e)});</script>
 
-    <meta content="Theo dõi COVID-19 tại California" property="og:title">
-    <meta content="Dữ liệu mới nhất về các ca bệnh, ca tử vong, xét nghiệm và cấp quận." property="og:description">
+    <meta content="Theo dõi tình hình COVID-19 tại California" property="og:title">
+    <meta content="Xem dữ liệu mới nhất về các ca bệnh, ca tử vong, kết quả xét nghiệm và cấp quận." property="og:description">
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="preconnect" href="https://www.google-analytics.com/">
@@ -149,7 +149,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <h1>Theo dõi COVID-19 tại California</h1>
+          <h1>Theo dõi tình hình COVID-19 tại California</h1>
           
             <p class="small-text">Cập nhật mới nhất&nbsp;
                 17 tháng 2, 2021 lúc 11:00</p>
@@ -233,11 +233,28 @@
       <div class="col-lg-10 mx-auto">
         <p class="small-text">Đã cập nhật 17 tháng 2, 2021, với dữ liệu từ 16 tháng 2, 2021.</p>
 
-        <p class="small-text">Lưu ý: Tỷ lệ ca mắc và xét nghiệm dương tính dựa trên mức trung bình 7 ngày với thời gian trễ là 7 ngày. Tỷ lệ tử vong dựa trên mức trung bình 7 ngày với thời gian trễ là 21 ngày do báo cáo chậm trễ. Thay đổi theo hướng được so sánh với khoảng thời gian 7 ngày trước đó. Dữ liệu do Sở Y Tế Công Cộng California cung cấp.</p>
+        <p class="small-text">Lưu ý: Tỷ lệ ca mắc được dựa trên mức trung bình 7 ngày với thời gian trễ là 7 ngày. Tỷ lệ ca tử vong dựa được trên mức trung bình 7 ngày với thời gian trễ là 21 ngày do báo cáo chậm trễ. Các ca xét nghiệm có kết quả dương tính được dựa trên mức trung bình 7 ngày mà không có thời gian trễ. Thay đổi theo hướng được so sánh với khoảng thời gian 7 ngày trước đó. Dữ liệu do Sở Y Tế Công Cộng California cung cấp.</p>
       </div>
     </div>
 
-  </div>   <!--END container--> </div> <!--END LIGHT BLUE BG-->    <h2 class="text-center color-purple">Xem dữ liệu trên toàn tiểu bang và ở mỗi quận</h2>
+  </div>   <!--END container--> </div> <!--END LIGHT BLUE BG-->    <div class="bg-darkblue py-5 full-bleed mb-5">
+            <div class="container py-2">
+                <div class="row pb-4">
+                    <div class="col-lg-10 mx-auto color-white">
+                        <h2 class="text-center color-orange" id="vaccination">Dữ liệu tiêm chủng</h2>
+                        <p>Chủng ngừa COVID-19 là một trong những biện pháp quan trọng nhất giúp chấm dứt đại dịch. Chúng tôi sẽ theo dõi tiến trình tiêm chủng cho người dân California trên toàn tiểu bang.</p>
+
+                        <div class="mt-3 text-center">                             <a href="/vaccines/#California-vaccines-dashboard" class="link-arrow-white">                                 <div class="link-arrow-label">Xem dữ liệu tiêm chủng</div><cagov-arrow></cagov-arrow> </a>                         </div>
+
+
+                    </div>
+                </div>
+
+            </div><!--END container-->         </div>
+
+
+
+<h2 class="text-center color-purple">Xem dữ liệu trên toàn tiểu bang và ở mỗi quận</h2>
 
 
 
