--- a/zh-hans/v2-state-dashboard/index.html
+++ b/zh-hans/v2-state-dashboard/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="有关病例数、死亡数、检测数及县等级的最新数据。">
+    <meta name="description" content="查看有关病例数、死亡数、检测数及县等级的最新数据。">
     <meta name="author" content="State of California">
      
   <title>加州COVID-19追踪 - Coronavirus COVID-19 Response</title>
@@ -13,7 +13,7 @@
     <script>addEventListener('error', window.__e=function f(e){f.q=f.q||[];f.q.push(e)});</script>
 
     <meta content="加州COVID-19追踪" property="og:title">
-    <meta content="有关病例数、死亡数、检测数及县等级的最新数据。" property="og:description">
+    <meta content="查看有关病例数、死亡数、检测数及县等级的最新数据。" property="og:description">
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="preconnect" href="https://www.google-analytics.com/">
@@ -231,11 +231,28 @@
       <div class="col-lg-10 mx-auto">
         <p class="small-text">根据2021年2月16日的数据在2021年2月17日更新。</p>
 
-        <p class="small-text">注：患病率和检测呈阳性率为7日平均数据，有7天的滞后期。死亡率为7日平均数据，有21天的滞后期，因为报告有延迟。定向变化与上一个7日周期做比较。数据由加州公共卫生局 (California Department of Public Health) 提供。</p>
+        <p class="small-text">注：患病率为7日平均数据，有7天的滞后期。死亡率为7日平均数据，有21天的滞后期，因为报告有延迟。检测呈阳性率为7日平均数据，无滞后期。定向变化与上一个7日周期做比较。数据由加州公共卫生局 (California Department of Public Health) 提供。</p>
       </div>
     </div>
 
-  </div>   <!--END container--> </div> <!--END LIGHT BLUE BG-->    <h2 class="text-center color-purple">查看全州及各县的数据</h2>
+  </div>   <!--END container--> </div> <!--END LIGHT BLUE BG-->    <div class="bg-darkblue py-5 full-bleed mb-5">
+            <div class="container py-2">
+                <div class="row pb-4">
+                    <div class="col-lg-10 mx-auto color-white">
+                        <h2 class="text-center color-orange" id="vaccination">疫苗接种数据</h2>
+                        <p>COVID-19疫苗是结束疫情的最重要的工具之一。本州正在追踪全加州民众的疫苗接种进度。</p>
+
+                        <div class="mt-3 text-center">                             <a href="/vaccines/#California-vaccines-dashboard" class="link-arrow-white">                                 <div class="link-arrow-label">查看疫苗接种数据</div><cagov-arrow></cagov-arrow> </a>                         </div>
+
+
+                    </div>
+                </div>
+
+            </div><!--END container-->         </div>
+
+
+
+<h2 class="text-center color-purple">查看全州及各县的数据</h2>
 
 
 
