--- a/ar/v2-state-dashboard/index.html
+++ b/ar/v2-state-dashboard/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="أحدث البيانات عن الحالات والوفيات والاختبارات وفئات المقاطعات.⁦">
+    <meta name="description" content="استعرض أحدث البيانات عن الحالات والوفيات والاختبارات وفئات المقاطعات.⁦">
     <meta name="author" content="State of California">
      
   <title>تعقب المصابين بكوفيد-19 في كاليفورنيا - Coronavirus COVID-19 Response</title>
@@ -13,7 +13,7 @@
     <script>addEventListener('error', window.__e=function f(e){f.q=f.q||[];f.q.push(e)});</script>
 
     <meta content="تعقب المصابين بكوفيد-19 في كاليفورنيا" property="og:title">
-    <meta content="أحدث البيانات عن الحالات والوفيات والاختبارات وفئات المقاطعات.⁦" property="og:description">
+    <meta content="استعرض أحدث البيانات عن الحالات والوفيات والاختبارات وفئات المقاطعات.⁦" property="og:description">
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="preconnect" href="https://www.google-analytics.com/">
@@ -231,11 +231,28 @@
       <div class="col-lg-10 mx-auto">
         <p class="small-text">محدثة 17 فبراير 2021، ببيانات من 16 فبراير 2021.</p>
 
-        <p class="small-text">ملاحظة: يستند معدل الإصابات وإيجابية الاختبارات على متوسط 7 أيام مع تأخر 7 أيام. وتستند معدلات الوفيات إلى متوسط قدره 7 أيام مع تأخر قدره 21 يومًا بسبب التأخر في الإبلاغ. ويقارن التغير في الاتجاه بفترة السبعة أيام السابقة. تقوم إدارة الصحة العامة بكاليفورنيا بتوفير البيانات.</p>
+        <p class="small-text">ملاحظة: يستند معدل الإصابات على متوسط 7 أيام مع تأخر 7 أيام. وتستند معدلات الوفيات إلى متوسط قدره 7 أيام مع تأخر قدره 21 يومًا بسبب التأخر في الإبلاغ. ويستند اختبار الإيجابية على متوسط 7 أيام مع عدم وجود تأخير. ويقارن التغير في الاتجاه بفترة السبعة أيام السابقة. تقوم إدارة الصحة العامة بكاليفورنيا بتوفير البيانات.</p>
       </div>
     </div>
 
-  </div>   <!--END container--> </div> <!--END LIGHT BLUE BG-->    <h2 class="text-center color-purple">انظر البيانات على مستوى الولاية وفي كل مقاطعة</h2>
+  </div>   <!--END container--> </div> <!--END LIGHT BLUE BG-->    <div class="bg-darkblue py-5 full-bleed mb-5">
+            <div class="container py-2">
+                <div class="row pb-4">
+                    <div class="col-lg-10 mx-auto color-white">
+                        <h2 class="text-center color-orange" id="vaccination">بيانات التلقيح</h2>
+                        <p>إن لقاح كوفيد-19 أحد أهم الأدوات الرامية إلى إنهاء الجائحة. نحن نتتبع التقدم في تطعيم سكان كاليفورنيا في جميع أنحاء الولاية.</p>
+
+                        <div class="mt-3 text-center">                             <a href="/vaccines/#California-vaccines-dashboard" class="link-arrow-white">                                 <div class="link-arrow-label">استعرض بيانات التلقيح</div><cagov-arrow></cagov-arrow> </a>                         </div>
+
+
+                    </div>
+                </div>
+
+            </div><!--END container-->         </div>
+
+
+
+<h2 class="text-center color-purple">انظر البيانات على مستوى الولاية وفي كل مقاطعة</h2>
 
 
 
