--- a/ko/v2-state-dashboard/index.html
+++ b/ko/v2-state-dashboard/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="사례 건수, 사망자 수, 검사 건수 및 카운티 단계에 관한 최신 데이터.">
+    <meta name="description" content="사례 건수, 사망자 수, 검사 건수 및 카운티 단계에 관한 최신 데이터를 확인하십시오.">
     <meta name="author" content="State of California">
      
   <title>캘리포니아 내 COVID-19 추적 관리 - Coronavirus COVID-19 Response</title>
@@ -13,7 +13,7 @@
     <script>addEventListener('error', window.__e=function f(e){f.q=f.q||[];f.q.push(e)});</script>
 
     <meta content="캘리포니아 내 COVID-19 추적 관리" property="og:title">
-    <meta content="사례 건수, 사망자 수, 검사 건수 및 카운티 단계에 관한 최신 데이터." property="og:description">
+    <meta content="사례 건수, 사망자 수, 검사 건수 및 카운티 단계에 관한 최신 데이터를 확인하십시오." property="og:description">
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="preconnect" href="https://www.google-analytics.com/">
@@ -231,11 +231,28 @@
       <div class="col-lg-10 mx-auto">
         <p class="small-text">2021년 2월 17일 업데이트, 2021년 2월 16일 자 데이터 사용.</p>
 
-        <p class="small-text">주의: 사례 발생율과 양성 반응은 7일 평균을 근거로 하며 7일의 시차가 있습니다. 사망율은 7일 평균을 근거로 하며 보고 상의 지연으로 인해 21일 시차가 있습니다. 추세 변경은 이전 7일 기간과 비교합니다. 데이터는 캘리포니아주 공중보건부(California Department of Public Health)에서 제공합니다.</p>
+        <p class="small-text">주의: 사례 발생율은 7일 평균을 기준으로 하며 7일의 시차가 있습니다. 사망율은 7일 평균을 기준으로 하며 보고 상의 지연으로 인해 21일 시차가 있습니다. 양성 판정율은 시차 없이 7일 평균을 기준으로 합니다. 추세 변경은 이전 7일 기간과 비교합니다. 데이터는 캘리포니아주 공중보건부(California Department of Public Health)에서 제공합니다.</p>
       </div>
     </div>
 
-  </div>   <!--END container--> </div> <!--END LIGHT BLUE BG-->    <h2 class="text-center color-purple">주 전체 및 카운티 별 데이터 참조</h2>
+  </div>   <!--END container--> </div> <!--END LIGHT BLUE BG-->    <div class="bg-darkblue py-5 full-bleed mb-5">
+            <div class="container py-2">
+                <div class="row pb-4">
+                    <div class="col-lg-10 mx-auto color-white">
+                        <h2 class="text-center color-orange" id="vaccination">백신 접종 관련 데이터</h2>
+                        <p>COVID-19 백신 접종은 판데믹 종식을 위한 가장 중요한 수단 중의 하나입니다. 주 전역에 걸쳐 캘리포니아 주민에 대한 백신 접종 진행 현황을 추적하고 있습니다.</p>
+
+                        <div class="mt-3 text-center">                             <a href="/vaccines/#California-vaccines-dashboard" class="link-arrow-white">                                 <div class="link-arrow-label">백신 접종 관련 데이터 확인</div><cagov-arrow></cagov-arrow> </a>                         </div>
+
+
+                    </div>
+                </div>
+
+            </div><!--END container-->         </div>
+
+
+
+<h2 class="text-center color-purple">주 전체 및 카운티 별 데이터 참조</h2>
 
 
 
