--- a/zh-hant/v2-state-dashboard/index.html
+++ b/zh-hant/v2-state-dashboard/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="有關病例數、死亡數、檢測數及縣等級的最新數據。">
+    <meta name="description" content="查看有關病例數、死亡數、檢測數及縣等級的最新數據。">
     <meta name="author" content="State of California">
      
   <title>加州COVID-19追蹤 - Coronavirus COVID-19 Response</title>
@@ -13,7 +13,7 @@
     <script>addEventListener('error', window.__e=function f(e){f.q=f.q||[];f.q.push(e)});</script>
 
     <meta content="加州COVID-19追蹤" property="og:title">
-    <meta content="有關病例數、死亡數、檢測數及縣等級的最新數據。" property="og:description">
+    <meta content="查看有關病例數、死亡數、檢測數及縣等級的最新數據。" property="og:description">
     <meta name="twitter:card" content="summary_large_image">
 
     <link rel="preconnect" href="https://www.google-analytics.com/">
@@ -231,11 +231,28 @@
       <div class="col-lg-10 mx-auto">
         <p class="small-text">根據2021年2月16日的數據在2021年2月17日更新。</p>
 
-        <p class="small-text">注：患病率和檢測呈陽性率為7日平均數據，有7天的滯後期。死亡率為7日平均數據，有21天的滯後期，因為報告有延遲。定向變化與上一個7日週期作比較。數據由加州公共衛生局 (California Department of Public Health) 提供。</p>
+        <p class="small-text">注：患病率為7日平均數據，有7天的滯後期。死亡率為7日平均數據，有21天的滯後期，因為報告有延遲。檢測呈陽性率為7日平均數據，無滯後期。定向變化與上一個7日週期作比較。數據由加州公共衛生局 (California Department of Public Health) 提供。</p>
       </div>
     </div>
 
-  </div>   <!--END container--> </div> <!--END LIGHT BLUE BG-->    <h2 class="text-center color-purple">查看全州及各縣的數據</h2>
+  </div>   <!--END container--> </div> <!--END LIGHT BLUE BG-->    <div class="bg-darkblue py-5 full-bleed mb-5">
+            <div class="container py-2">
+                <div class="row pb-4">
+                    <div class="col-lg-10 mx-auto color-white">
+                        <h2 class="text-center color-orange" id="vaccination">疫苗接種數據</h2>
+                        <p>COVID-19疫苗是結束疫情的最重要的工具之一。本州正在追蹤全加州民眾的疫苗接種進度。</p>
+
+                        <div class="mt-3 text-center">                             <a href="/vaccines/#California-vaccines-dashboard" class="link-arrow-white">                                 <div class="link-arrow-label">查看疫苗接種數據</div><cagov-arrow></cagov-arrow> </a>                         </div>
+
+
+                    </div>
+                </div>
+
+            </div><!--END container-->         </div>
+
+
+
+<h2 class="text-center color-purple">查看全州及各縣的數據</h2>
 
 
 
