Update translation - 102810405 (#3350) 65dfed64193cc0bb1ea41662c741e928772dd694

--- a/ar/vaccines/index.html
+++ b/ar/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>اللقاحات</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;6:16 ص الساعة 16 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;8:47 م الساعة 16 فبراير 2021</p>
           
         </div>
       </div>
@@ -251,7 +251,7 @@
 
 
 
-<p>تخصص كاليفورنيا لقاحات كوفيد-19 عندما تصبح متاحة لضمان التوزيع العادل. في البداية كان التطعيم مقتصرًا على العاملين في مجال الرعاية الصحية والمقيمين في الرعاية الطويلة الأجل.</p>
+<p>تخصص كاليفورنيا لقاحات كوفيد-19 عندما تصبح متاحة لضمان التوزيع العادل. </p>
 
 
 
@@ -287,7 +287,7 @@
     <div class="col-md-6 bg-lightblue bd-col-white py-3 d-flex flex-column p-0 pt-0">
       <div class="bd-top-14-yellow"></div>
       <div class="p-3">
-        <h3 class="color-purple mb-1 pb-0 mt-3">المرحلة *1B</h3>
+        <h3 class="color-purple mb-1 pb-0 mt-3">المرحلة 1B</h3>
    <p class="font-size-0-95em">يقدرون بحوالي 12 مليون شخص</p>          <hr class="bd-top-black mt-4 mb-3"> <p></p>
         <p class="mb-1 font-size-0-95em"><span class="color-blue">التطعيم الآن في حدود ما تسمح به الإمدادت ومخزون اللقاح</span></p>
         <ul class="font-size-0-95em">
@@ -306,11 +306,31 @@
 
 
 
-<p class="small-text">*ابتداءً من 15 مارس، يمكن لمقدمي الرعاية الصحية استخدام التشخيص السريري لتلقيح الأفراد الذين تتراوح أعمارهم ما بين 16 و64 والذين <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx" class="alert-link">يعتبرون الأكثر عرضة لخطر</a> الإصابة بحالة شديدة من مرض كوفيد-19. </p>
-
-
-
 <p>راجع <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">إرشادات تخصيص لقاح كوفيد-19 المحدثة</a> الصادرة عن إدارة الصحة العامة بولاية كاليفورنيا للحصول على التفاصيل.</p>
+
+
+
+<h3>تطعيم الأشخاص المعرضين لخطر أكبر</h3>
+
+
+
+<p>*ابتداءً من 15 مارس، يمكن لمقدمي الرعاية الصحية استخدام التشخيص السريري لتلقيح الأفراد الذين تتراوح أعمارهم ما بين 16 و64 والذين <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">يعتبرون الأكثر عرضة لخطر</a> الإصابة بحالة شديدة من مرض كوفيد-19 لأنهم يعانون إحدى الحالات المرضية الشديدة التالية:</p>
+
+
+
+<ul><li><strong>السرطان</strong>، حاليًا مع ضعف في الجهاز المناعي</li><li><strong>مرض الكُلى المزمن</strong>، المرحلة 4 أو ما فوقها</li><li><strong>الأمراض الرئوية المزمنة </strong>والتي يحتاج مريضها إلى الأكسجين</li><li><strong>متلازمة داون</strong></li><li><strong>زرع الأعضاء الصلبة </strong> الذي يؤدي إلى ضعف الجهاز المناعي</li><li><strong>الحمل</strong></li><li><strong> داءُ الكُرَيَّاتِ المِنْجَلِيَّة (مرض فقر الدم المنجلي)</strong></li><li><strong>أمراض القلب</strong>، مثل قصور القلب أو مرض الشريان التاجي أو اعتلال عضلة القلب (ولكن ليس من بينها ارتفاع ضغط الدم)</li><li><strong>السمنة المفرطة</strong> (مؤشر كتلة الجسم ≥ 40 كجم/م<sup>2</sup>)</li><li><strong>النوع 2 من البول السكري</strong> مع زيادة مستوى الهيموجلوبين A1c لأكثر من 7.5%<br><br><em>أو</em></li></ul>
+
+
+
+<p>وإذا كانوا نتيجة لإعاقة في النمو أو عن إعاقة شديدة أخرى عالية الخطورة فينطبق واحد أو أكثر مما يلي:</p>
+
+
+
+<ul><li>من المرجح أن يصاب الفرد بمرض خطير يهدد حياته أو يموت بسبب عدوى كوفيد-19</li><li>ومن شأن الإصابة بكوفيد-19 أن تحد من قدرة الفرد على تلقي الخدمات الصحية أو الرعاية المستمرة ولاتي هي لازمة لاسترداد عافيته وبقائه على قيد الحياة</li><li>وسيُشكل توفير الرعاية الكافية لمرضى كوفيد في الوقت المناسب تحديًا صعبًا بشكل بارز نتيجة لإعاقة الفرد.</li></ul>
+
+
+
+<p>انظر <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">نشرة مزود الخدمات</a> الصادرة عن إدارة الصحة العامة بولاية كاليفورنيا للاطلاع على التفاصيل.</p>
 
 
 
@@ -544,8 +564,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>إن إدارة الصحة العامة بولاية كاليفورنيا تقوم بتطوير <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">موارد التسجيل</a>.</p>
-<p>يقتصر التسجيل الأولي في برنامج التطعيم على المواقع التي اختارتها إدارات الصحة المحلية. ونرحب بغيرهم من جميع مقدمي الخدمات المهتمين (بما في ذلك العيادات والصيدليات) للتسجيل في وقت مبكر من هذا العام. </p>
+            <p>تقوم إدارة الصحة العامة بولاية كاليفورنيا بتطوير <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">عملية التسجيل</a></p>
+<p>يقتصر التسجيل الأولي في برنامج التطعيم على المواقع التي اختارتها إدارات الصحة المحلية. وسيُفتح باب التسجيل أمام مزودي الخدمات الآخرين مع زيادة إمدادات اللقاح.</p>
 
                   </div>
                 </div>
