--- a/zh-hant/vaccines/index.html
+++ b/zh-hant/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>疫苗</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月16日, 上午6:16</p>
+            <p class="small-text">最近更新&nbsp;2021年2月16日, 下午8:47</p>
           
         </div>
       </div>
@@ -251,7 +251,7 @@
 
 
 
-<p>當COVID-19疫苗數量充足可以保證公平分配時，加州會進行分配。最初僅限醫務人員及長期護理機構居住者接種疫苗。</p>
+<p>當COVID-19疫苗數量充足可以保證公平分配時，加州會進行分配。 </p>
 
 
 
@@ -287,7 +287,7 @@
     <div class="col-md-6 bg-lightblue bd-col-white py-3 d-flex flex-column p-0 pt-0">
       <div class="bd-top-14-yellow"></div>
       <div class="p-3">
-        <h3 class="color-purple mb-1 pb-0 mt-3">第1B階段*</h3>
+        <h3 class="color-purple mb-1 pb-0 mt-3">第1B階段</h3>
    <p class="font-size-0-95em">大約1200萬人</p>          <hr class="bd-top-black mt-4 mb-3"> <p></p>
         <p class="mb-1 font-size-0-95em"><span class="color-blue">疫苗供應量允許現在接種疫苗</span></p>
         <ul class="font-size-0-95em">
@@ -306,11 +306,31 @@
 
 
 
-<p class="small-text">*自3月15日開始，醫療保健提供者可能會使用臨床判斷，來為<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx" class="alert-link">被視為最有可能因COVID-19患上重症</a>的16至64歲高危人士接種疫苗。 </p>
-
-
-
 <p>詳情請參閱<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">CDPH發佈的最新COVID-19疫苗分配指引</a>。</p>
+
+
+
+<h3>為高危人士接種疫苗</h3>
+
+
+
+<p>自3月15日開始，醫療保健提供者可能會使用臨床判斷，來為因有以下嚴重健康狀況，而<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">被視為最有可能</a>因COVID-19患上重症的16至64歲高危人士接種疫苗：</p>
+
+
+
+<ul><li><strong>癌症</strong>，導致免疫系統減弱</li><li><strong>慢性腎病</strong>，第4階段或以上</li><li><strong>慢性肺病</strong>，依賴氧氣治療</li><li><strong>唐氏症</strong></li><li><strong>實體器官移植</strong>，導致免疫系統減弱</li><li><strong>懷孕</strong></li><li><strong>鐮狀細胞病</strong></li><li><strong>心臟病</strong>，例如心力衰竭、冠狀動脈疾病或心肌病（但並非高血壓）</li><li><strong>重度肥胖</strong>（體重指數 ≥ 40 kg/m<sup>2</sup>）</li><li><strong>2型糖尿病</strong>，血紅蛋白A1c水平高於7.5%<br><br><em>或</em></li></ul>
+
+
+
+<p>因為發育殘障或其他嚴重的高風險殘障狀況而可能導致以下一種或多種情況：</p>
+
+
+
+<ul><li>相關人士很可能因感染COVID-19而患上危及生命的嚴重疾病或死亡</li><li>感染COVID-19會使相關人士接受持續護理或服務的能力受限，這些護理或服務對其健康和生存而言必不可少</li><li>因相關人士的殘障狀況而使提供充分且及時的COVID護理變得尤其困難。</li></ul>
+
+
+
+<p>詳情請參閱CDPH發佈的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">服務提供者公告</a>。</p>
 
 
 
@@ -544,8 +564,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>CDPH正在開發<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">註冊資源</a>。</p>
-<p>在起始階段，僅限在地方衛生局選定的地點註冊參與疫苗接種計劃。歡迎所有其他有意向的疫苗接種提供者（包括診所和藥房）在今年年初進行註冊。 </p>
+            <p>CDPH正在制定<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">註冊流程</a>。</p>
+<p>在起始階段，僅限在地方衛生局選定的地點註冊參與疫苗接種計劃。當疫苗供應量增加時，會向其他疫苗接種提供者開放註冊。</p>
 
                   </div>
                 </div>
