--- a/es/vaccines/index.html
+++ b/es/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vacunas</h1>
           
-            <p class="small-text">Última actualización&nbsp;16 de febrero de 2021 a las 6:16 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;16 de febrero de 2021 a las 8:47 p. m.</p>
           
         </div>
       </div>
@@ -251,7 +251,7 @@
 
 
 
-<p>California está asignando vacunas contra la COVID-19 a medida que están disponibles para garantizar una distribución equitativa. Al principio, la vacunación se limitó a los trabajadores de la salud y a los residentes de instalaciones de atención a largo plazo.</p>
+<p>California está asignando vacunas contra la COVID-19 a medida que están disponibles para garantizar una distribución equitativa. </p>
 
 
 
@@ -287,7 +287,7 @@
     <div class="col-md-6 bg-lightblue bd-col-white py-3 d-flex flex-column p-0 pt-0">
       <div class="bd-top-14-yellow"></div>
       <div class="p-3">
-        <h3 class="color-purple mb-1 pb-0 mt-3">Fase 1B*</h3>
+        <h3 class="color-purple mb-1 pb-0 mt-3">Fase 1B</h3>
    <p class="font-size-0-95em">Aprox. 12 millones de personas</p>          <hr class="bd-top-black mt-4 mb-3"> <p></p>
         <p class="mb-1 font-size-0-95em"><span class="color-blue">ACTUALMENTE ESTAMOS VACUNANDO, SEGÚN LO PERMITAN LOS SUMINISTROS, A</span></p>
         <ul class="font-size-0-95em">
@@ -306,11 +306,31 @@
 
 
 
-<p class="small-text">*A partir del 15 de marzo, los proveedores de atención médica pueden usar su criterio clínico para vacunar a las personas de 16 a 64 años que <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx" class="alert-link">se considere que tienen el mayor riesgo</a> de enfermarse gravemente de COVID-19. </p>
+<p>Consulte los detalles en las <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">Pautas actualizadas de asignación de las vacunas contra la COVID-19 del Departamento de Salud Pública de California (California Department of Public Health, CDPH)</a>.</p>
 
 
 
-<p>Consulte los detalles en las <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">Pautas actualizadas de asignación de las vacunas contra la COVID-19 del CDPH</a>.</p>
+<h3>Vacunación de las personas con mayor riesgo</h3>
+
+
+
+<p>*A partir del 15 de marzo, los proveedores de atención médica pueden usar su criterio clínico para vacunar a las personas de 16 a 64 años que <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">se considere que tienen el mayor riesgo</a> de enfermarse gravemente de COVID-19 por tener las siguientes afecciones de salud graves:</p>
+
+
+
+<ul><li><strong>cáncer</strong> en la actualidad con sistema inmunológico debilitado</li><li><strong>enfermedad renal crónica</strong> en etapa 4 o superior</li><li><strong>enfermedad pulmonar crónica</strong>, dependiente de oxígeno</li><li><strong>síndrome de Down</strong></li><li><strong>trasplante de órganos sólidos </strong>que conlleve a un sistema inmunológico debilitado.</li><li><strong>embarazo</strong></li><li><strong>enfermedad de células falciformes</strong></li><li><strong>afecciones cardiacas</strong>, como insuficiencia cardiaca, enfermedad de las arterias coronarias o miocardiopatías (pero no hipertensión)</li><li><strong>obesidad grave</strong> (índice de masa corporal ≥ 40 kg/m<sup>2</sup>)</li><li><strong>diabetes mellitus tipo 2</strong> con nivel de hemoglobina A1c superior al 7.5 %<br><br><em>O</em></li></ul>
+
+
+
+<p>Si como resultado de una discapacidad del desarrollo u otra discapacidad grave de alto riesgo, se da una o más de las siguientes circunstancias:</p>
+
+
+
+<ul><li>Es probable que la persona desarrolle una enfermedad grave que ponga en peligro su vida o muera a causa de la infección por COVID-19.</li><li>Adquirir COVID-19 limitará la capacidad de la persona para recibir atención o servicios continuos vitales para su bienestar y supervivencia.</li><li>Brindar una atención para COVID adecuada y oportuna será particularmente desafiante como resultado de la discapacidad de la persona.</li></ul>
+
+
+
+<p>Consulte detalles en el <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">Boletín para proveedores</a> del CDPH.</p>
 
 
 
@@ -544,8 +564,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>El CDPH está en el proceso de preparación de los <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">recursos para la inscripción</a>.</p>
-<p>La inscripción inicial en el programa de vacunación se limita a los sitios seleccionados por los departamentos de salud locales. Todos los demás proveedores interesados (incluidas las clínicas y farmacias) podrán inscribirse a principios de este año. </p>
+            <p>El CDPH está diseñando un <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">proceso de inscripción</a>.</p>
+<p>La inscripción inicial en el programa de vacunación se limita a los sitios seleccionados por los departamentos de salud locales. La inscripción se abrirá a otros proveedores a medida que aumente el suministro de vacunas.</p>
 
                   </div>
                 </div>
