--- a/ko/vaccines/index.html
+++ b/ko/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>백신</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 16일 오전 6:16</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 16일 오후 8:47</p>
           
         </div>
       </div>
@@ -251,7 +251,7 @@
 
 
 
-<p>캘리포니아는 공정한 배포를 위해 COVID-19 백신이 공급되는 즉시 이를 배분하고 있습니다. 초기 단계에서 백신 접종은 의료 종사자와 장기 요양자로 제한되었습니다.</p>
+<p>캘리포니아는 공정한 배급을 보장하기 위해 COVID-19 백신이 공급되는 즉시 이를 배분하고 있습니다. </p>
 
 
 
@@ -287,8 +287,8 @@
     <div class="col-md-6 bg-lightblue bd-col-white py-3 d-flex flex-column p-0 pt-0">
       <div class="bd-top-14-yellow"></div>
       <div class="p-3">
-        <h3 class="color-purple mb-1 pb-0 mt-3">1B 단계*</h3>
-   <p class="font-size-0-95em">천2백만명 추정</p>          <hr class="bd-top-black mt-4 mb-3"> <p></p>
+        <h3 class="color-purple mb-1 pb-0 mt-3">1B 단계</h3>
+   <p class="font-size-0-95em">1천2백만명 추정</p>          <hr class="bd-top-black mt-4 mb-3"> <p></p>
         <p class="mb-1 font-size-0-95em"><span class="color-blue">수급 한도 내에서 현재 백신 접종 진행 중</span></p>
         <ul class="font-size-0-95em">
           <li>65세 이상 개인</li>
@@ -306,11 +306,31 @@
 
 
 
-<p class="small-text">*3월 15일 자로 의료 제공자는 임상적 판단을 통해 COVID-19로 인한 중증 발생 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx" class="alert-link">위험이 가장 높은 것으로 인정되는 </a>16-64세의 개인에게 백신을 접종할 수도 있습니다. </p>
-
-
-
 <p>세부 사항은 CDPH의 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">COVID-19 백신 배분 관련 최신 지침</a>을 참조하십시오.</p>
+
+
+
+<h3>고위험군에 대한 백신 접종</h3>
+
+
+
+<p>3월 15일 자로 의료 제공자는 임상적 판단을 통해 다음과 같은 중증 질병을 앓고 있어 COVID-19로 인한 중증 발생 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">위험이 가장 높은 것으로 인정되는 </a>16-64세의 개인에게 백신을 접종할 수도 있습니다:</p>
+
+
+
+<ul><li><strong>암</strong>, 현재 진행 중이며 면역계가 약화된 상태 </li><li><strong>만성 신장 질환</strong>, 4기 이상</li><li><strong>만성 폐 질환, </strong>산소 의존</li><li><strong>다운 증후군</strong></li><li><strong>고형 장기 이식, </strong>면역계 약화 유발</li><li><strong>임신</strong></li><li><strong>겸상 적혈구 빈혈증</strong></li><li><strong>심장 질환</strong>, 심부전, 관상 동맥 질병 또는 심근증 등(고혈압 제외)</li><li><strong>고도 비만</strong>(체질량 지수 ≥ 40 kg/m<sup>2</sup>)</li><li><strong>제2형 당뇨병</strong>, 헤모글로빈 A1c 수치가 7.5% 초과<br><br><em>또는</em></li></ul>
+
+
+
+<p>발달 장애나 기타 고위험 장애의 결과로 다음 중 하나 이상에 해당하는 경우:</p>
+
+
+
+<ul><li>COVID-19 감염으로 인해 생명을 위협하는 중증의 질병이나 사망에 이르게 할 가능성이 높은 경우</li><li>COVID-19에 걸리면 자신의 웰빙과 생존에 반드시 필요하여 진행 중인 의료나 서비스를 받을 수 있는 능력이 제한될 경우</li><li>충분하고 시의 적절한 COVID 의료 제공이 해당자의 장애로 인해 특히 어려울 경우.</li></ul>
+
+
+
+<p>세부 사항은 CDPH의 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">의료 제공자 관련 고시 내용</a>을 참조하십시오.</p>
 
 
 
@@ -544,8 +564,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>CDPH에서 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">등록 관련 자원</a>을 마련하고 있습니다.</p>
-<p>초기 단계에서의 백신 접종 프로그램 등록은 해당 지역 보건부에서 선정한 장소로 제한되어 있습니다. 관심있는 다른 모든 제공자(의원 및 약국 포함)에게는 올 초에 등록할 수 있는 기회가 열려 있습니다. </p>
+            <p>CDPH가 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">등록 절차</a>를 마련하고 있습니다.</p>
+<p>초기 단계에서의 백신 접종 프로그램 등록은 해당 지역 보건부에서 선정한 장소로 제한되어 있습니다. 백신 공급 증가에 따라 다른 의료 제공자에게도 등록 기회가 주어질 것입니다.</p>
 
                   </div>
                 </div>
@@ -563,7 +583,7 @@
 
 
 
-<h3>백신 접종 받기</h3>
+<h3>백신 접종하기</h3>
 
 
 
