--- a/tl/vaccines/index.html
+++ b/tl/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Mga Bakuna</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 16, 2021 sa 6:16 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 16, 2021 sa 8:47 PM</p>
           
         </div>
       </div>
@@ -251,7 +251,7 @@
 
 
 
-<p>Ang California ay maglalaan ng mga bakuna laban sa COVID-19 kapag naging available ang mga ito para matiyak ang patas na pamamahagi. Sa simula, limitado ang pagpapabakuna sa mga manggagawa sa pangangalagang pangkalusugan at residente ng pangmatagalang pangangalaga.</p>
+<p>Ang California ay maglalaan ng mga bakuna laban sa COVID-19 kapag naging available ang mga ito para matiyak ang patas na pamamahagi. </p>
 
 
 
@@ -287,7 +287,7 @@
     <div class="col-md-6 bg-lightblue bd-col-white py-3 d-flex flex-column p-0 pt-0">
       <div class="bd-top-14-yellow"></div>
       <div class="p-3">
-        <h3 class="color-purple mb-1 pb-0 mt-3">Phase 1B*</h3>
+        <h3 class="color-purple mb-1 pb-0 mt-3">Phase 1B</h3>
    <p class="font-size-0-95em">Tinatayang 12M tao</p>          <hr class="bd-top-black mt-4 mb-3"> <p></p>
         <p class="mb-1 font-size-0-95em"><span class="color-blue">NAGBABAKUNA NA, KUNG MAYROONG SUPPLY</span></p>
         <ul class="font-size-0-95em">
@@ -306,11 +306,31 @@
 
 
 
-<p class="small-text">*Simula sa Marso 15, puwedeng gamitin ng mga provider ng pangangalagang pangkalusugan ang kanilang klinikal na pagpapasya para bakunahan ang mga indibidwal na may edad na 16-64 na taon na <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx" class="alert-link"> may napakalaking posibilidad</a> na magkaroon ng napakalalang sakit dahil sa COVID-19. </p>
-
-
-
 <p>Tingnan ang <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">Na-update na Mga Alituntunin sa Paglalaan ng Bakuna ng CDPH</a> para sa mga detalye.</p>
+
+
+
+<h3>Pagbabakuna sa mga nasa mataas na panganib</h3>
+
+
+
+<p>Simula sa Marso 15, puwedeng gamitin ng mga provider ng pangangalagang pangkalusugan ang kanilang klinikal na pagpapasya para bakunahan ang mga indibidwal na may edad na 16-64 na taon <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">na may napakalaking posibilidad</a> na magkaroon ng napakalalang sakit dahil sa COVID-19 dahil mayroon sila ng sumusunod na matinding kundisyon sa kalusugan:</p>
+
+
+
+<ul><li><strong>Cancer</strong>, kasalukuyang may mahinang immune system</li><li><strong>Chronic kidney disease</strong>, stage 4 pataas</li><li><strong>Chronic pulmonary disease, </strong>umaasa sa oxygen</li><li><strong>Down syndrome</strong></li><li><strong>Solid organ transplant, </strong>humahantong sa mahinang immune system</li><li><strong>Pagbubuntis</strong></li><li><strong>Sickle cell disease</strong></li><li><strong>Mga kundisyon sa puso</strong>, gaya ng pagpalya ng puso, coronary artery disease, o cardiomyopathy (pero hindi altapresyon)</li><li><strong>Matinding obesity</strong> (Body Mass Index ≥ 40 kg/m<sup>2</sup>)</li><li><strong>Type 2 diabetes mellitus</strong> na may antas ng hemoglobin A1c na mas mataas sa 7.5%<br><br><em>O KAYA</em></li></ul>
+
+
+
+<p>Kung bilang resulta ng developmental o iba pang nasa mataas na panganib na kapansanan, nalalapat ang isa o dalawa sa sumusunod:</p>
+
+
+
+<ul><li>Ang indibidwal ay malamang na magkaroon ng matinding karamdamang nakakamatay o malamang na mamatay dahil sa impeksyon sa COVID-19</li><li>Kapag nagkaroon ng COVID-19 ang indibidwal, malilimitahan ang kakahayan niya na makatanggap ng kasalukuyang panangalaga o mga serbsiyong mahalaga sa kanyang well-being o survival</li><li>Ang pagbibigay ng sapat at napapanahong pangangalaga laban sa COVID ay partikular na magiging mahirap bilang resulta ng kapansanan ng indibidwal.</li></ul>
+
+
+
+<p>Tingnan ang <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">Bullentin ng Provider</a> ng CDPH para sa mga detalye.</p>
 
 
 
@@ -544,8 +564,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Kasalukuyang dine-develop ng CDPH ang <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">Mga Resource sa Pagpapatala</a>.</p>
-<p>Ang paunang pagpapatala sa programa sa pagpapabakun ay limitado sa mga lugar na napili ng mga lokal na departamento ng kalusugan. Puwedeng magpatala sa unang bahagi ng taong ito ang lahat ng iba pang interesadong provider (kasama ang mga klinika at parmasya). </p>
+            <p>Ang CDPH ay bumubuo ng <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">proseso sa enrollment</a>.</p>
+<p>Ang paunang pagpapatala sa programa sa pagpapabakun ay limitado sa mga lugar na napili ng mga lokal na departamento ng kalusugan. Ang enrollment ay magbubukas sa ibang provider habang tumataas ang supply ng bakuna.</p>
 
                   </div>
                 </div>
