--- a/vi/vaccines/index.html
+++ b/vi/vaccines/index.html
@@ -152,7 +152,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vắc-xin</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;16 tháng 2, 2021 lúc 6:16</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;16 tháng 2, 2021 lúc 20:47</p>
           
         </div>
       </div>
@@ -253,7 +253,7 @@
 
 
 
-<p>California sẽ phân bổ vắc-xin COVID-19 khi có sẵn để đảm bảo phân phối công bằng. Ban đầu, chủng ngừa được giới hạn ở các nhân viên chăm sóc sức khỏe và cư dân tại các cơ sở chăm sóc dài hạn.</p>
+<p>California sẽ phân bổ vắc-xin COVID-19 khi có sẵn để đảm bảo phân phối công bằng. </p>
 
 
 
@@ -289,7 +289,7 @@
     <div class="col-md-6 bg-lightblue bd-col-white py-3 d-flex flex-column p-0 pt-0">
       <div class="bd-top-14-yellow"></div>
       <div class="p-3">
-        <h3 class="color-purple mb-1 pb-0 mt-3">Giai đoạn 1B*</h3>
+        <h3 class="color-purple mb-1 pb-0 mt-3">Giai đoạn 1B</h3>
    <p class="font-size-0-95em">Ước tính 12 triệu người</p>          <hr class="bd-top-black mt-4 mb-3"> <p></p>
         <p class="mb-1 font-size-0-95em"><span class="color-blue">CHỦNG NGỪA NGAY NẾU CÓ VẮC-XIN</span></p>
         <ul class="font-size-0-95em">
@@ -308,11 +308,31 @@
 
 
 
-<p class="small-text">*Bắt đầu từ ngày 15 tháng 3, các nhà cung cấp dịch vụ chăm sóc sức khỏe có thể sử dụng kết quả đánh giá lâm sàng của mình để chủng ngừa cho những người trong độ tuổi từ 16-64 tuổi <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx" class="alert-link"> được coi là có nguy cơ mắc bệnh do COVID-19 rất cao</a>. </p>
+<p>Xem <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">Hướng Dẫn Phân Bổ Vắc-xin COVID-19 Cập Nhật</a> của Sở Y Tế Công Cộng California (California Department of Public Health, CDPH) để biết thêm chi tiết.</p>
 
 
 
-<p>Xem <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">Hướng Dẫn Phân Bổ Vắc-xin COVID-19 Cập Nhật</a> của Sở Y Tế Công Cộng California (California Department of Public Health, CDPH) để biết thêm thông tin chi tiết.</p>
+<h3>Tiêm vắc-xin cho những người có nguy cơ cao</h3>
+
+
+
+<p>Bắt đầu từ ngày 15 tháng 3, các nhà cung cấp dịch vụ chăm sóc sức khỏe có thể sử dụng kết quả đánh giá lâm sàng của mình để chủng ngừa cho những người trong độ tuổi từ 16-64 tuổi <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">được coi là có nguy cơ mắc bệnh do COVID-19 rất cao</a> vì họ đang  mang các bệnh lý nền:</p>
+
+
+
+<ul><li><strong>Ung thư</strong>, hiện có hệ miễn dịch suy yếu</li><li><strong>Bệnh thận mãn tính</strong>, giai đoạn 4 trở lên</li><li><strong>Bệnh phổi mãn tính, </strong>phụ thuộc vào ôxy</li><li><strong>Hội chứng Down</strong></li><li><strong>Ghép tạng rắn, </strong>dẫn đến làm suy yếu hệ miễn dịch</li><li><strong>Mang thai</strong></li><li><strong>Bệnh hồng cầu hình liềm</strong></li><li><strong>Các loại bệnh tim nghiêm trọng</strong>, như suy tim, bệnh động mạch vành hoặc bệnh cơ tim (nhưng không tăng huyết áp)</li><li><strong>Béo phì trầm trọng</strong> (Chỉ Số Khối Cơ Thể ≥ 40 kg/m<sup>2</sup>)</li><li><strong>Bệnh tiểu đường loại 2</strong> với nồng độ hemoglobin A1c lớn hơn 7.5%<br><br><em>HOẶC</em></li></ul>
+
+
+
+<p>Nếu do tình trạng khuyết tật về phát triển hoặc khuyết tật nặng có nguy cơ cao khác, một hoặc nhiều điều sau đây sẽ được áp dụng: </p>
+
+
+
+<ul><li>Cá nhân có khả năng tiến triển bệnh nặng đe dọa đến tính mạng hoặc tử vong do lây nhiễm COVID-19</li><li>Mắc COVID-19 sẽ hạn chế khả năng của cá nhân nhận được dịch vụ chăm sóc liên tục hoặc các dịch vụ quan trọng đối với sức khỏe và sự sống của họ</li><li>Việc cung cấp đầy đủ và kịp thời các dịch vụ chăm sóc COVID sẽ đặc biệt khó khăn do tình trạng khuyết tật của cá nhân đó.</li></ul>
+
+
+
+<p>Hãy xem <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">Bảng Tin Nhà Cung Cấp</a> của CDPH để biết thông tin chi tiết.</p>
 
 
 
@@ -374,7 +394,7 @@
         <div class="row pb-4">
             <div class="col-lg-10 mx-auto color-white">
                 <h2 class="text-center color-orange" id="vaccination">Vắc-xin có sẵn</h2>
-                <p>Việc chủng ngừa cho tất cả 58 quận cần có sự hợp tác giữa Tiểu Bang, các cơ quan y tế địa phương và tất cả những tổ chức chủng ngừa để quản lý và sử dụng vắc-xin hiện có trong kho. Xem cách thức các nhà cung cấp dịch vụ theo dõi số lượng vắc-xin có sẵn.</p>
+                <p>Việc chủng ngừa cho tất cả 58 quận cần có sự hợp tác giữa Tiểu Bang, các cơ quan y tế địa phương và tất cả những tổ chức chủng ngừa để quản lý và sử dụng vắc-xin có trong kho. Xem cách thức các nhà cung cấp dịch vụ theo dõi số lượng vắc-xin có sẵn.</p>
                 <div class="mt-3 text-center">                     <a href="https://public.tableau.com/views/COVID-19VaccineProviderDashboardPublic/PublicVaccineProviderDashboard?:embed=y&amp;:showVizHome=no#1" class="link-arrow-white">                         <div class="link-arrow-label">Xem các liều vắc-xin được cung cấp bởi các nhà cung cấp dịch vụ</div><cagov-arrow></cagov-arrow> </a>                 </div>
             </div>
         </div>
@@ -479,8 +499,8 @@
 <ul><li>Các cơ sở chủng ngừa cộng đồng</li><li>Văn phòng của bác sĩ</li><li>Phòng khám</li><li>Hiệu thuốc </li></ul>
 <p>Nhân viên chăm sóc sức khỏe và các cá nhân 65 tuổi trở lên gần các Quận San Francisco, Los Angeles hoặc San Diego có thể đăng ký lịch hẹn ngay thông qua trang <a href="https://myturn.ca.gov">myturn.ca.gov</a> hoặc gọi số (833) 422-4255. Đặt lịch hẹn trực tuyến cho các nhóm khác và cư dân thuộc các quận khác sẽ sớm được triển khai. Các lịch hẹn cũng có sẵn bằng tiếng Tây Ban Nha thông qua trang <a href="https://myturn.ca.gov">myturn.ca.gov</a> hoặc gọi số (833) 422-4255.</p>
 <p>Một số <a href="/vi/get-local-information/">cơ quan y tế có thẩm quyền của địa phương</a> cũng đang cung cấp dịch vụ đặt lịch hẹn, đăng ký và thông báo.</p>
-<p>Hiện nay, các hiệu thuốc <a href="https://www.cvs.com/immunizations/covid-19-vaccine">CVS</a>, <a href="https://www.riteaid.com/pharmacy/covid-qualifier">Rite Aid</a> và <a href="https://www.walgreens.com/topic/promotion/covid-vaccine.jsp">Walgreens</a> chấp nhận các lịch hẹn tiêm vắc-xin COVID-19 miễn phí giới hạn tại một số khu vực nhất định.</p>
-<p>Mọi người dân California đều có thể đăng ký tại <a href="https://myturn.ca.gov">myturn.ca.gov</a> hoặc gọi số (833) 422-4255 để xem đã đến lượt họ tiêm vắc-xin COVID-19 hay chưa. Nếu hiện tại quý vị không đủ điều kiện, quý vị có thể đăng ký để nhận thông báo khi đến lượt.</p>
+<p>Hiện nay, các hiệu thuốc <a href="https://www.cvs.com/immunizations/covid-19-vaccine">CVS</a>, <a href="https://www.riteaid.com/pharmacy/covid-qualifier">Rite Aid</a> và <a href="https://www.walgreens.com/topic/promotion/covid-vaccine.jsp">Walgreens</a> chấp nhận các lịch hẹn giới hạn để tiêm vắc-xin COVID-19 miễn phí ở một số khu vực nhất định.</p>
+<p>Mọi người dân California đều có thể đăng ký tại <a href="https://myturn.ca.gov">myturn.ca.gov</a> hoặc gọi số (833) 422-4255 để xem đến lượt họ tiêm vắc-xin COVID-19 hay chưa. Nếu hiện tại quý vị không đủ điều kiện, quý vị có thể đăng ký để nhận thông báo khi đến lượt.</p>
 
                   </div>
                 </div>
@@ -546,8 +566,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>CDPH đang trong quá trình phát triển các <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">Nguồn Thông Tin Ghi Danh</a>.</p>
-<p>Việc ghi danh ban đầu để tham gia chương trình chủng ngừa được giới hạn ở các địa điểm do sở y tế địa phương lựa chọn. Tất cả các nhà cung cấp quan tâm khác (bao gồm các phòng khám và hiệu thuốc) sẽ có thể ghi danh vào đầu năm nay. </p>
+            <p>CDPH sẽ phát triển <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">quy trình ghi danh</a>.</p>
+<p>Việc ghi danh ban đầu để tham gia chương trình chủng ngừa được giới hạn ở các địa điểm do sở y tế địa phương lựa chọn. Quy trình ghi danh sẽ mở cho các nhà cung cấp khác khi có nguồn cấp vắc-xin.</p>
 
                   </div>
                 </div>
@@ -665,7 +685,7 @@
             <p>Có. Mọi người dân California đều có thể đăng ký tại <a href="https://myturn.ca.gov">myturn.ca.gov</a> hoặc gọi số (833) 422-4255 để xem đến lượt họ tiêm vắc-xin COVID-19 hay chưa. Nếu hiện tại quý vị không đủ điều kiện, quý vị có thể đăng ký để nhận thông báo khi đến lượt.</p>
 <p>Nhân viên chăm sóc sức khỏe và các cá nhân 65 tuổi trở lên ở các Quận San Francisco, Los Angeles  và San Diego có thể đăng ký lịch hẹn ngay thông qua trang <a href="https://myturn.ca.gov">myturn.ca.gov</a> hoặc gọi số (833) 422-4255 Đặt lịch hẹn trực tuyến cho các nhóm khác và cư dân thuộc các quận khác sẽ sớm được triển khai.  Các lịch hẹn cũng có sẵn bằng tiếng Tây Ban Nha thông qua trang <a href="https://myturn.ca.gov">myturn.ca.gov</a> hoặc gọi số (833) 422-4255.</p>
 <p>Một số <a href="/vi/get-local-information/">cơ quan y tế có thẩm quyền của địa phương</a> cũng đang cung cấp dịch vụ đặt lịch hẹn, đăng ký và thông báo.</p>
-<p>Hiện nay, các hiệu thuốc <a href="https://www.cvs.com/immunizations/covid-19-vaccine">CVS</a>, <a href="https://www.riteaid.com/pharmacy/covid-qualifier">Rite Aid</a> và <a href="https://www.walgreens.com/topic/promotion/covid-vaccine.jsp">Walgreens</a> chấp nhận các lịch hẹn tiêm vắc-xin COVID-19 miễn phí giới hạn tại một số khu vực nhất định.</p>
+<p>Hiện nay, các hiệu thuốc <a href="https://www.cvs.com/immunizations/covid-19-vaccine">CVS</a>, <a href="https://www.riteaid.com/pharmacy/covid-qualifier">Rite Aid</a> và <a href="https://www.walgreens.com/topic/promotion/covid-vaccine.jsp">Walgreens</a> chấp nhận các lịch hẹn giới hạn để tiêm vắc-xin COVID-19 miễn phí ở một số khu vực nhất định.</p>
 
                   </div>
                 </div>
