--- a/zh-hans/vaccines/index.html
+++ b/zh-hans/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>疫苗</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月16日, 上午6:16</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月16日, 下午8:47</p>
           
         </div>
       </div>
@@ -251,7 +251,7 @@
 
 
 
-<p>当COVID-19疫苗数量充足可以确保分配的公平性时，加州会进行分配。最初仅限医务人员及长期护理机构居住者接种疫苗。</p>
+<p>当COVID-19疫苗数量充足可以确保分配的公平性时，加州会进行分配。 </p>
 
 
 
@@ -287,7 +287,7 @@
     <div class="col-md-6 bg-lightblue bd-col-white py-3 d-flex flex-column p-0 pt-0">
       <div class="bd-top-14-yellow"></div>
       <div class="p-3">
-        <h3 class="color-purple mb-1 pb-0 mt-3">第1B阶段*</h3>
+        <h3 class="color-purple mb-1 pb-0 mt-3">第1B阶段</h3>
    <p class="font-size-0-95em">大约1200万人</p>          <hr class="bd-top-black mt-4 mb-3"> <p></p>
         <p class="mb-1 font-size-0-95em"><span class="color-blue">疫苗供应量允许现在接种疫苗</span></p>
         <ul class="font-size-0-95em">
@@ -306,11 +306,31 @@
 
 
 
-<p class="small-text">*自3月15日开始，医疗保健提供者可能会使用临床判断，来为被视为<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx" class="alert-link">最有可能因COVID-19患上重症</a>的16至64岁高危人士接种疫苗。 </p>
-
-
-
 <p>详情请参阅<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/VaccineAllocationGuidelines.aspx">CDPH发布的最新COVID-19疫苗分配指引</a>。</p>
+
+
+
+<h3>为高危人士接种疫苗</h3>
+
+
+
+<p>自3月15日开始，医疗保健提供者可能会使用临床判断，来为因有以下严重健康状况，而<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">被视为最有可能</a>因COVID-19患上重症的16至64岁高危人士接种疫苗：</p>
+
+
+
+<ul><li><strong>癌症</strong>，导致免疫系统减弱</li><li><strong>慢性肾病</strong>，第4阶段或以上</li><li><strong>慢性肺病</strong>，依赖氧气治疗</li><li><strong>唐氏症</strong></li><li><strong>实体器官移植</strong>，导致免疫系统减弱</li><li><strong>怀孕</strong></li><li><strong>镰状细胞病</strong></li><li><strong>心脏病</strong>，如心脏衰竭、冠心病或心肌病（但并非高血压）</li><li><strong>重度肥胖</strong>（体重指数 ≥ 40 kg/m<sup>2</sup>）</li><li><strong>2型糖尿病</strong>，血红蛋白A1c水平高于7.5%<br><br><em>或</em></li></ul>
+
+
+
+<p>因为发育残障或其他严重的高风险残障状况而可能导致以下一种或多种情况：</p>
+
+
+
+<ul><li>相关人士很可能因感染COVID-19而患上危及生命的严重疾病或死亡</li><li>感染COVID-19会使相关人士接受持续护理或服务的能力受限，这些护理或服务对其健康和生存而言必不可少</li><li>因相关人士的残障状况而使提供充分且及时的COVID护理变得尤其困难。</li></ul>
+
+
+
+<p>详情请参阅CDPH发布的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Provider-Bulletin-2-12-21.aspx">服务提供者公告</a>。</p>
 
 
 
@@ -372,8 +392,8 @@
         <div class="row pb-4">
             <div class="col-lg-10 mx-auto color-white">
                 <h2 class="text-center color-orange" id="vaccination">现有疫苗</h2>
-                <p>要为全州58个县的民众接种疫苗，需要州府、地方卫生辖区及所有疫苗接种者共同管理和利用疫苗库存。了解疫苗接种提供者如何追踪现有疫苗。</p>
-                <div class="mt-3 text-center">                     <a href="https://public.tableau.com/views/COVID-19VaccineProviderDashboardPublic/PublicVaccineProviderDashboard?:embed=y&amp;:showVizHome=no#1" class="link-arrow-white">                         <div class="link-arrow-label">查看疫苗接种提供者现有的疫苗剂数</div><cagov-arrow></cagov-arrow> </a>                 </div>
+                <p>要为58个县的民众接种需要州府、地方卫生辖区和所有疫苗接种员共同管理和利用疫苗库存。查阅提供者如何追踪现有疫苗。</p>
+                <div class="mt-3 text-center">                     <a href="https://public.tableau.com/views/COVID-19VaccineProviderDashboardPublic/PublicVaccineProviderDashboard?:embed=y&amp;:showVizHome=no#1" class="link-arrow-white">                         <div class="link-arrow-label">查看提供者现有疫苗剂量</div><cagov-arrow></cagov-arrow> </a>                 </div>
             </div>
         </div>
     </div><!--END container--> </div>
@@ -477,7 +497,7 @@
 <ul><li>社区疫苗接种点</li><li>医生诊室</li><li>诊所</li><li>药房 </li></ul>
 <p>San Francisco县、Los Angeles县或San Diego县附近的医务人员及65岁以上人士，可以通过访问网站<a href="https://myturn.ca.gov">myturn.ca.gov</a>或致电 (833) 422-4255立即预约接种。上述县内的其他人群及其他县内的居民之网上预约时间表将随后公布。使用西班牙语的民众亦可通过访问网站<a href="https://myturn.ca.gov">myturn.ca.gov</a>或致电 (833) 422-4255预约接种。</p>
 <p>一些<a href="/zh-hans/get-local-information/">地方卫生辖区</a>现亦正提供预约、登记和通知服务。</p>
-<p><a href="https://www.cvs.com/immunizations/covid-19-vaccine">CVS</a>、<a href="https://www.riteaid.com/pharmacy/covid-qualifier">Rite Aid</a>和<a href="https://www.walgreens.com/topic/promotion/covid-vaccine.jsp">Walgreens</a>药房现正在选定区域接受有限的免费COVID-19疫苗接种预约。</p>
+<p><a href="https://www.cvs.com/immunizations/covid-19-vaccine">CVS</a>， <a href="https://www.riteaid.com/pharmacy/covid-qualifier">Rite Aid</a>和 <a href="https://www.walgreens.com/topic/promotion/covid-vaccine.jsp">Walgreens</a>药店部分选定区域目前可接受预约免费接种COVID-19疫苗，但预约数量有限。</p>
 <p>所有加州民众都可通过在<a href="https://myturn.ca.gov">myturn.ca.gov</a>注册或致电 (833) 422-4255确认是否轮到自己接种COVID-19疫苗。如果您目前不符合资格，可以先进行注册，以在轮到您接种疫苗时接获通知。</p>
 
                   </div>
@@ -516,7 +536,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>如何分配和施打疫苗？</h4>
+            <h4>如何分配和管理疫苗？</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -544,8 +564,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>CDPH正在开发<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">注册资源</a>。</p>
-<p>在起始阶段，仅限在地方卫生局选定的地点注册参与疫苗接种计划。欢迎所有其他有意向的疫苗接种提供者（包括诊所和药房）在今年年初进行注册。 </p>
+            <p>CDPH正在制定<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">注册流程</a>。</p>
+<p>在起始阶段，仅限在地方卫生局选定的地点注册参与疫苗接种计划。当疫苗供应量增加时，会向其他疫苗接种提供者开放注册。</p>
 
                   </div>
                 </div>
@@ -663,7 +683,7 @@
             <p>可以。所有加州民众都可通过在<a href="https://myturn.ca.gov">myturn.ca.gov</a>注册或致电 (833) 422-4255确认是否轮到自己接种COVID-19疫苗。如果您目前不符合资格，可以先进行注册，以在轮到您接种疫苗时接获通知。</p>
 <p>San Francisco县、Los Angeles县和San Diego县内的医务人员及65岁以上人士，可以通过访问网站<a href="https://myturn.ca.gov">myturn.ca.gov</a>或致电 (833) 422-4255立即预约接种。上述县内的其他人群及其他县内的居民之网上预约时间表将随后公布。使用西班牙语的民众亦可通过访问网站<a href="https://myturn.ca.gov">myturn.ca.gov</a>或致电 (833) 422-4255预约接种。</p>
 <p>一些<a href="/zh-hans/get-local-information/">地方卫生辖区</a>现亦正提供预约、登记和通知服务。</p>
-<p><a href="https://www.cvs.com/immunizations/covid-19-vaccine">CVS</a>、<a href="https://www.riteaid.com/pharmacy/covid-qualifier">Rite Aid</a>和<a href="https://www.walgreens.com/topic/promotion/covid-vaccine.jsp">Walgreens</a>药房现正在选定区域接受有限的免费COVID-19疫苗接种预约。</p>
+<p><a href="https://www.cvs.com/immunizations/covid-19-vaccine">CVS</a>， <a href="https://www.riteaid.com/pharmacy/covid-qualifier">Rite Aid</a>和 <a href="https://www.walgreens.com/topic/promotion/covid-vaccine.jsp">Walgreens</a>药店部分选定区域目前可接受预约免费接种COVID-19疫苗，但预约数量有限。</p>
 
                   </div>
                 </div>
@@ -984,7 +1004,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Drafting-Guidelines-Workgroup.aspx/">专家组</a>和<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Community-Vaccine-Advisory-Committee.aspx/">社区代表组</a>通力协作，确保疫苗分配的优先次序具有公平性。 </p>
+            <p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Drafting-Guidelines-Workgroup.aspx/">一组专家</a>和<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Community-Vaccine-Advisory-Committee.aspx/">一组社区代表</a>合作确保疫苗分配的优先次序的公平性。 </p>
 <p>加州成立了由专家组成的<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Scientific-Safety-Review-Workgroup.aspx">科学安全性审查工作组</a>，以确保COVID-19疫苗的安全性。该工作组已确认，经FDA授权的COVID-19疫苗安全有效。</p>
 
                   </div>
