Update page - sign-up-for-county-alerts.html 7b98496cecd9a8160ce85cb50e2ea63ae596b786

--- a/sign-up-for-county-alerts/index.html
+++ b/sign-up-for-county-alerts/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Local Alerts</h1>
           
-            <p class="small-text">Last updated&nbsp;February 17, 2021 at 1:42 PM</p>
+            <p class="small-text">Last updated&nbsp;February 18, 2021 at 3:17 PM</p>
           
         </div>
       </div>
@@ -174,7 +174,7 @@
         </label>
         <div class="awesomplete">
           <div class="awesomplete">
-            <input aria-expanded="false" aria-owns="awesomplete_list_1" aria-controls="awesomplete_list_1" autocomplete="off" class="city-search form-control" data-list="" data-multiple="" id="location-query" role="combobox" type="text">
+            <input aria-expanded="false" aria-owns="awesomplete_list_1" aria-controls="awesomplete_list_1" autocomplete="off" class="city-search form-control" data-list="" data-multiple="" id="location-query" role="combobox" type="text" aria-expanded="true">
           </div>
         </div>
         <button class="btn btn-primary" type="submit">
