Update page - vaccines.html e501d6d29878c4bf502395f0f2182f219bd3d0a1

--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;February 18, 2021 at 2:25 PM</p>
+            <p class="small-text">Last updated&nbsp;February 19, 2021 at 5:54 AM</p>
           
         </div>
       </div>
@@ -261,7 +261,7 @@
 
 
 
-<h3>Vaccinating those at higher risk</h3>
+<h3 id="Vaccinating-those-at-higher-risk">Vaccinating those at higher risk</h3>
 
 
 
@@ -511,7 +511,7 @@
 
 
 
-<h3>Quarantine if you’re vaccinated</h3>
+<h3 id="Quarantine-if-you’re-vaccinated">Quarantine if you’re vaccinated</h3>
 
 
 
