--- a/data-and-tools/index.html
+++ b/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Data and tools</h1>
           
-            <p class="small-text">Last updated&nbsp;February 18, 2021 at 8:12 PM</p>
+            <p class="small-text">Last updated&nbsp;February 19, 2021 at 5:58 AM</p>
           
         </div>
       </div>
