--- a/zh-hans/data-and-tools/index.html
+++ b/zh-hans/data-and-tools/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>数据及工具</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月18日, 下午8:12</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月19日, 上午5:58</p>
           
         </div>
       </div>
