Update translation - 102890334 (#3363) d8945518d7b73255070860f7a954ac1f784b573b

--- a/tl/v2-state-dashboard/index.html
+++ b/tl/v2-state-dashboard/index.html
@@ -231,7 +231,7 @@
       <div class="col-lg-10 mx-auto">
         <p class="small-text">Na-update noong Pebrero 18, 2021, na may datos mula sa Pebrero 17, 2021.</p>
 
-        <p class="small-text">Tala: Ang rate ng kaso ay batay sa 7 araw na average na may 7 araw na lag. Ang mga rate ng pagkamatay ay batay sa 7 araw na average na may 21 araw na lag dahil sa mga pagkakaantala sa pag-uulat. Nakabatay ang pagpopositibo ng pagsusuri sa isang 7 araw na araw nang walang lag. Ang pagbabago sa direksyon ay inihahambing sa naunang 7 araw na panahon. Ang datos ay ibinibigay ng California Department of Public Health.</p>
+        <p class="small-text">Tala: Ang rate ng kaso ay batay sa 7 araw na average na may 7 araw na lag. Ang mga rate ng pagkamatay ay batay sa 7 araw na average na may 21 araw na lag dahil sa mga pagkaantala sa pag-uulat. Nakabatay ang pagpopositibo ng pagsusuri sa isang 7 araw na araw nang walang lag. Ang pagbabago sa direksyon ay inihahambing sa naunang 7 araw na panahon. Ang datos ay ibinibigay ng California Department of Public Health.</p>
       </div>
     </div>
 
