--- a/es/v2-state-dashboard/index.html
+++ b/es/v2-state-dashboard/index.html
@@ -242,7 +242,7 @@
                         <h2 class="text-center color-orange" id="vaccination">Fecha de vacunación</h2>
                         <p>La vacunación contra la COVID-19 es una de las herramientas más importantes para poner fin a la pandemia. Estamos siguiendo el progreso de la vacunación de los californianos en todo el estado.</p>
 
-                        <div class="mt-3 text-center">                             <a href="/vaccines/#California-vaccines-dashboard" class="link-arrow-white">                                 <div class="link-arrow-label">Consulte los datos de la vacunación</div><cagov-arrow></cagov-arrow> </a>                         </div>
+                        <div class="mt-3 text-center">                             <a href="/vaccines/#California-vaccines-dashboard" class="link-arrow-white">                                 <div class="link-arrow-label">Consulte la fecha de vacunación</div><cagov-arrow></cagov-arrow> </a>                         </div>
 
 
                     </div>
@@ -252,7 +252,7 @@
 
 
 
-<h2 class="text-center color-purple">Vea los datos de todo el estado y de cada condado.</h2>
+<h2 class="text-center color-purple">Vea los datos de todo el estado y de cada condado</h2>
 
 
 
