Update translation - 102885102 (#3362) 5b5c09765980b947eb20101445205013a8d21305

--- a/ar/get-financial-help/index.html
+++ b/ar/get-financial-help/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>الحصول على مساعدة مالية</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;12:25 م الساعة 2 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;3:18 م الساعة 17 فبراير 2021</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 
 
 
-<p>يرجى زيارة <a href="/ar/housing-and-homelessness/#renters" data-type="URL" data-id="/ar/housing-and-homelessness/#renters" aria-label="Renters section of the Housing">صفحة الإسكان</a> الخاصة بنا لتعرِف ما يجب أن يتضمنه إعلان المشقة الخاص بك.</p>
+<p>يرجى زيارة <a href="/ar/housing-and-homelessness/#renters" data-type="URL" data-id="/ar/housing-and-homelessness/#renters">صفحة الإسكان</a> الخاصة بنا لتعرِف ما يجب أن يتضمنه إعلان المشقة الخاص بك.</p>
 
 
 
@@ -221,7 +221,7 @@
 
 
 
-<p>ابحث عن المزيد حول مساعدات الرهن العقاري، وكيفية الحصول عليها على صفحتنا <a href="/ar/housing-and-homelessness/#homeowners-small-landlords" data-type="URL" data-id="/ar/housing-and-homelessness/#homeowners-small-landlords" aria-label="homeowners and small landlords section of our Housing" "="">الإسكان</a>.</p>
+<p>ابحث عن المزيد حول مساعدات الرهن العقاري، وكيفية الحصول عليها على <a href="/ar/housing-and-homelessness/#homeowners-small-landlords" data-type="URL" data-id="/ar/housing-and-homelessness/#homeowners-small-landlords">صفحتنا الإسكان</a>.</p>
 
 
 
