--- a/es/get-financial-help/index.html
+++ b/es/get-financial-help/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Obtenga ayuda financiera</h1>
           
-            <p class="small-text">Última actualización&nbsp;2 de febrero de 2021 a las 12:25 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;17 de febrero de 2021 a las 3:18 p. m.</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 
 
 
-<p>Visite nuestra página de <a href="/es/housing-and-homelessness/#renters" data-type="URL" data-id="/es/housing-and-homelessness/#renters" aria-label="Renters section of the Housing">vivienda</a> para saber qué debe incluir su declaración de dificultades económicas.</p>
+<p>Visite nuestra página de <a href="/es/housing-and-homelessness/#renters" data-type="URL" data-id="/es/housing-and-homelessness/#renters">vivienda</a> para saber qué debe incluir su declaración de dificultades económicas.</p>
 
 
 
@@ -221,7 +221,7 @@
 
 
 
-<p>Encuentre más ayuda hipotecaria y cómo obtenerla en nuestra página de <a href="/es/housing-and-homelessness/#homeowners-small-landlords" data-type="URL" data-id="/es/housing-and-homelessness/#homeowners-small-landlords" aria-label="homeowners and small landlords section of our Housing" "="">vivienda</a>.</p>
+<p>Encuentre más ayuda hipotecaria y cómo obtenerla en nuestra <a href="/es/housing-and-homelessness/#homeowners-small-landlords" data-type="URL" data-id="/es/housing-and-homelessness/#homeowners-small-landlords">página de vivienda</a>.</p>
 
 
 
