--- a/vi/get-financial-help/index.html
+++ b/vi/get-financial-help/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Nhận hỗ trợ tài chính</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;2 tháng 2, 2021 lúc 24:25</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;17 tháng 2, 2021 lúc 15:18</p>
           
         </div>
       </div>
@@ -195,7 +195,7 @@
 
 
 
-<p>Truy cập trang <a href="/vi/housing-and-homelessness/#renters" data-type="URL" data-id="/vi/housing-and-homelessness/#renters" aria-label="Renters section of the Housing">Nhà ở</a> của chúng tôi để tìm hiểu nội dung cần đề cập trong bản kê khai tình trạng khó khăn của quý vị.</p>
+<p>Truy cập trang <a href="/vi/housing-and-homelessness/#renters" data-type="URL" data-id="/vi/housing-and-homelessness/#renters">Nhà ở</a> của chúng tôi để tìm hiểu nội dung cần đề cập trong bản kê khai tình trạng khó khăn của quý vị.</p>
 
 
 
@@ -223,7 +223,7 @@
 
 
 
-<p>Tìm hiểu thêm về hỗ trợ khoản vay thế chấp và cách nhận hỗ trợ trên trang <a href="/vi/housing-and-homelessness/#homeowners-small-landlords" data-type="URL" data-id="/vi/housing-and-homelessness/#homeowners-small-landlords" aria-label="homeowners and small landlords section of our Housing" "="">Nhà ở</a> của chúng tôi.</p>
+<p>Tìm hiểu thêm về hỗ trợ khoản vay thế chấp và cách nhận hỗ trợ trên <a href="/vi/housing-and-homelessness/#homeowners-small-landlords" data-type="URL" data-id="/vi/housing-and-homelessness/#homeowners-small-landlords">trang Nhà Ở</a> của chúng tôi.</p>
 
 
 
