--- a/ko/get-financial-help/index.html
+++ b/ko/get-financial-help/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>재정 지원 받기</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 2일 오후 12:25</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 17일 오후 3:18</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 
 
 
-<p>경제적 어려움을 고지하는데 따른 필수 포함 사항은 <a href="/ko/housing-and-homelessness/#renters" data-type="URL" data-id="/ko/housing-and-homelessness/#renters" aria-label="Renters section of the Housing">주택</a> 관련 페이지에서 확인하십시오.</p>
+<p>경제적 어려움을 고지하는데 따른 필수 포함 사항은 <a href="/ko/housing-and-homelessness/#renters" data-type="URL" data-id="/ko/housing-and-homelessness/#renters">주택</a> 관련 페이지에서 확인하십시오.</p>
 
 
 
@@ -221,7 +221,7 @@
 
 
 
-<p>주택 담보 대출에 대한 추가 지원 및 신청 방법에 대한 더 자세한 사항은 <a href="/ko/housing-and-homelessness/#homeowners-small-landlords" data-type="URL" data-id="/ko/housing-and-homelessness/#homeowners-small-landlords" aria-label="homeowners and small landlords section of our Housing" "="">주택</a> 페이지서 확인하십시오.</p>
+<p>주택 담보 대출에 대한 추가 지원 및 신청 방법은 <a href="/ko/housing-and-homelessness/#homeowners-small-landlords" data-type="URL" data-id="/ko/housing-and-homelessness/#homeowners-small-landlords">주택 관련 페이지</a> 에서 확인하십시오.</p>
 
 
 
