--- a/tl/get-financial-help/index.html
+++ b/tl/get-financial-help/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Makakuha ng tulong-pinansyal</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Pebrero 2, 2021 sa 12:25 PM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 17, 2021 sa 3:18 PM</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 
 
 
-<p>Bisitahin ang page na <a href="/tl/housing-and-homelessness/#renters" data-type="URL" data-id="/tl/housing-and-homelessness/#renters" aria-label="Renters section of the Housing">Pabahay</a> para malaman kung ano ang dapat kasama sa iyong paghahayag ng matinding problema.</p>
+<p>Bisitahin ang page na <a href="/tl/housing-and-homelessness/#renters" data-type="URL" data-id="/tl/housing-and-homelessness/#renters">Pabahay</a> para malaman kung ano ang dapat kasama sa iyong paghahayag ng matinding problema.</p>
 
 
 
@@ -221,7 +221,7 @@
 
 
 
-<p>Alamin ang higit pang tulong sa mortgage at kung paano makuha ito sa aming <a href="/tl/housing-and-homelessness/#homeowners-small-landlords" data-type="URL" data-id="/tl/housing-and-homelessness/#homeowners-small-landlords" aria-label="homeowners and small landlords section of our Housing" "="">Housing</a> page.</p>
+<p>Makakita ng higit pang tulong sa mortgage at alamin kung paano makatanggap nito sa aming page na <a href="/tl/housing-and-homelessness/#homeowners-small-landlords" data-type="URL" data-id="/tl/housing-and-homelessness/#homeowners-small-landlords">Pabahay</a>.</p>
 
 
 
