--- a/zh-hans/get-financial-help/index.html
+++ b/zh-hans/get-financial-help/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>获得财务援助</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月2日, 下午12:25</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月17日, 下午3:18</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 
 
 
-<p>请浏览我们的<a href="/zh-hans/housing-and-homelessness/#renters" data-type="URL" data-id="/zh-hans/housing-and-homelessness/#renters" aria-label="Renters section of the Housing">住房页面</a>，了解您的困难声明中必须包含哪些内容。</p>
+<p>请浏览我们的<a href="/zh-hans/housing-and-homelessness/#renters" data-type="URL" data-id="/zh-hans/housing-and-homelessness/#renters">住房页面</a>，了解您的困难声明中必须包含哪些内容。</p>
 
 
 
@@ -221,7 +221,7 @@
 
 
 
-<p>请浏览我们的<a href="/zh-hans/housing-and-homelessness/#homeowners-small-landlords" data-type="URL" data-id="/zh-hans/housing-and-homelessness/#homeowners-small-landlords" aria-label="homeowners and small landlords section of our Housing" "="">住房</a>页面，了解更多房贷援助以及如何获取援助。</p>
+<p>请浏览我们的<a href="/zh-hans/housing-and-homelessness/#homeowners-small-landlords" data-type="URL" data-id="/zh-hans/housing-and-homelessness/#homeowners-small-landlords">住房页面</a>，了解更多房贷援助以及如何获取援助。</p>
 
 
 
