--- a/zh-hant/get-financial-help/index.html
+++ b/zh-hant/get-financial-help/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>獲得財務援助</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月2日, 下午12:25</p>
+            <p class="small-text">最近更新&nbsp;2021年2月17日, 下午3:18</p>
           
         </div>
       </div>
@@ -193,7 +193,7 @@
 
 
 
-<p>請瀏覽我們的<a href="/zh-hant/housing-and-homelessness/#renters" data-type="URL" data-id="/zh-hant/housing-and-homelessness/#renters" aria-label="Renters section of the Housing">住房</a>頁面，了解您的困難聲明中必須包含哪些內容。</p>
+<p>請瀏覽我們的<a href="/zh-hant/housing-and-homelessness/#renters" data-type="URL" data-id="/zh-hant/housing-and-homelessness/#renters">住房</a>頁面，了解您的困難聲明中必須包含哪些內容。</p>
 
 
 
@@ -221,7 +221,7 @@
 
 
 
-<p>請瀏覽我們的<a href="/zh-hant/housing-and-homelessness/#homeowners-small-landlords" data-type="URL" data-id="/zh-hant/housing-and-homelessness/#homeowners-small-landlords" aria-label="homeowners and small landlords section of our Housing" "="">住房</a>頁面，了解更多房貸援助以及如何獲取援助。</p>
+<p>請瀏覽我們的<a href="/zh-hant/housing-and-homelessness/#homeowners-small-landlords" data-type="URL" data-id="/zh-hant/housing-and-homelessness/#homeowners-small-landlords">住房</a>頁面，了解更多房貸援助以及如何獲取援助。</p>
 
 
 
