ADD pages/guidancefeed/cdph/64c396ce804fda966ac3bbacc0461d79.html 412c26dade58a5f04cd0b454b81a2868e304390b

--- a/es/latest-news/index.html
+++ b/es/latest-news/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Últimas noticias sobre COVID-19</h1>
           
-            <p class="small-text">Última actualización&nbsp;19 de febrero de 2021 a las 11:41 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;19 de febrero de 2021 a las 1:32 p. m.</p>
           
         </div>
       </div>
@@ -171,6 +171,14 @@
           </h2>
           <p class="card-text" lang="en-US"><small class="text-muted"><!--46261 -->February 18, 2021</small></p>
           <div class="card-text" lang="en-US">SACRAMENTO – Governor Gavin Newsom today issued the following statement regarding the COVID-19-related death of Sergeant Richard “Paul” Brown II of the Fresno Police Department: “Jennifer and I extend our sincere condole...</div>
+        </div>
+      </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
+        <div class="card-body pl-0" lang="en-US">
+          <h2 class="card-title lead" lang="en-US">
+            <a href="https://www.cdph.ca.gov/Programs/OPA/Pages/NR21-058.aspx" lang="en-US" hreflang="en-US" rel="external">State Officials Announce Latest COVID-19 Facts&nbsp;(#329)</a>
+          </h2>
+          <p class="card-text" lang="en-US"><small class="text-muted"><!--64c396ce804fda966ac3bbacc0461d79 -->February 18, 2021</small></p>
+          <div class="card-text" lang="en-US">Today, the California Department of Public Health (CDPH) released the most recent statistics on COVID-19.</div>
         </div>
       </div> <div class="card border-0 border-bottom rounded-0" lang="en-US">
         <div class="card-body pl-0" lang="en-US">
